--- a/Rigveda/SamhitaPatha/Devanagari/Ashtaka/Format1/RVS-Devanagari-F1-A04.html
+++ b/Rigveda/SamhitaPatha/Devanagari/Ashtaka/Format1/RVS-Devanagari-F1-A04.html
@@ -7,7 +7,7 @@
 <body>
 <h1 class='simpHtmlH1'>|| श्री॒ गु॒रु॒भ्यो॒ न॒मः॒ हरिः ॐ ||</h1>
 <h2 class='simpHtmlH1'>|| ऋग्वेद संहिता (अष्टक: 04) ||</h2>
-<hr><h6 style='font-family: Arial, Helvetica, sans-serif'>For any questions, suggestions or participation in the project, contact Dayananda Aithal at dithal29@gmail.com<br>Mantra classification is following this convention{अष्टक,अध्याय,वर्ग,मंत्र}{मंडल,सूक्त,मंत्र}{मंडल,अनुवाक,सूक्त,मंत्र}{ऋक्संहित सूक्त संख्या,ऋक्संहित मन्त्र संख्या}<br> [Last updated on: 18-Dec-2024]</h6>
+<hr><h6 style='font-family: Arial, Helvetica, sans-serif'>For any questions, suggestions or participation in the project, contact Dayananda Aithal at dithal29@gmail.com<br>Mantra classification is following this convention{अष्टक,अध्याय,वर्ग,मंत्र}{मंडल,सूक्त,मंत्र}{मंडल,अनुवाक,सूक्त,मंत्र}{ऋक्संहित सूक्त संख्या,ऋक्संहित मन्त्र संख्या}<br> [Last updated on: 04-Jan-2025]</h6>
 <hr>
 <table>
 <tbody>
@@ -1218,7 +1218,7 @@
 <td class='VargaStyle1'>ये वा᳚वृ॒धन्त॒ पार्थि॑वा॒ य उ॒राव॒न्तरि॑क्ष॒ आ |<span class='RishiDevChandas'>{आत्रेयः श्यावाश्वः | मरुतः | अनुष्टुप्}</span><p>वृ॒जने᳚ वा न॒दीनां᳚ स॒धस्थे᳚ वा म॒हो दि॒वः ||<span class='MantraNumbering'>{7/17}{4.3.9.2}{5.52.7}{5.4.8.7}{406, 4084}</span></td>
 </tr>
 <tr>
-<td class='VargaStyle1'>शर्धो॒ मारु॑त॒मुच्छं᳚स स॒त्यश॑वस॒मृभ्व॑सम् |<span class='RishiDevChandas'>{आत्रेयः श्यावाश्वः | मरुतः | पङ्क्तिः}</span><p>उ॒त स्म॒ ते शु॒भे नरः॒ प्र स्य॒न्द्रा यु॑जत॒ त्मना᳚ ||<span class='MantraNumbering'>{8/17}{4.3.9.3}{5.52.8}{5.4.8.8}{406, 4085}</span></td>
+<td class='VargaStyle1'>शर्धो॒ मारु॑त॒मुच्छं᳚स स॒त्यश॑वस॒मृभ्व॑सम् |<span class='RishiDevChandas'>{आत्रेयः श्यावाश्वः | मरुतः | पङ्क्तिः}</span><p>उ॒त स्म॒ ते शु॒भे नरः॒ प्र स्प॒न्द्रा यु॑जत॒ त्मना᳚ ||<span class='MantraNumbering'>{8/17}{4.3.9.3}{5.52.8}{5.4.8.8}{406, 4085}</span></td>
 </tr>
 <tr>
 <td class='VargaStyle1'>उ॒त स्म॒ ते परु॑ष्ण्या॒मूर्णा᳚ वसत शु॒न्ध्यवः॑ |<span class='RishiDevChandas'>{आत्रेयः श्यावाश्वः | मरुतः | अनुष्टुप्}</span><p>उ॒त प॒व्या रथा᳚ना॒मद्रिं᳚ भिन्द॒न्त्योज॑सा ||<span class='MantraNumbering'>{9/17}{4.3.9.4}{5.52.9}{5.4.8.9}{406, 4086}</span></td>
@@ -1314,7 +1314,7 @@
 <td class='VargaStyle2'>व्य१॑(अ॒)क्तून्‌ रु॑द्रा॒ व्यहा᳚नि शिक्वसो॒ व्य१॑(अ॒)न्तरि॑क्षं॒ वि रजां᳚सि धूतयः |<span class='RishiDevChandas'>{आत्रेयः श्यावाश्वः | मरुतः | जगती}</span><p>वि यदज्राँ॒, अज॑थ॒ नाव॑ ईं यथा॒ वि दु॒र्गाणि॑ मरुतो॒ नाह॑ रिष्यथ ||<span class='MantraNumbering'>{4/15}{4.3.14.4}{5.54.4}{5.4.10.4}{408, 4114}</span></td>
 </tr>
 <tr>
-<td class='VargaStyle2'>तद्वी॒र्यं᳚ वो मरुतो महित्व॒नं दी॒र्घं त॑तान॒ सूर्यो॒ न योज॑नम् |<span class='RishiDevChandas'>{आत्रेयः श्यावाश्वः | मरुतः | जगती}</span><p>एता॒ न यामे॒, अगृ॑भीतशोचि॒षो ऽन॑श्वदां॒ यन्न्यया᳚तना गि॒रिम् ||<span class='MantraNumbering'>{5/15}{4.3.14.5}{5.54.5}{5.4.10.5}{408, 4115}</span></td>
+<td class='VargaStyle2'>तद्‌ वी॒र्यं᳚ वो मरुतो महित्व॒नं दी॒र्घं त॑तान॒ सूर्यो॒ न योज॑नम् |<span class='RishiDevChandas'>{आत्रेयः श्यावाश्वः | मरुतः | जगती}</span><p>एता॒ न यामे॒, अगृ॑भीतशोचि॒षो ऽन॑श्वदां॒ यन्न्यया᳚तना गि॒रिम् ||<span class='MantraNumbering'>{5/15}{4.3.14.5}{5.54.5}{5.4.10.5}{408, 4115}</span></td>
 </tr>
 <tr>
 <td class='VargaStyle1'>अभ्रा᳚जि॒ शर्धो᳚ मरुतो॒ यद᳚र्ण॒सं मोष॑था वृ॒क्षं क॑प॒नेव॑ वेधसः |<span class='RishiDevChandas'>{आत्रेयः श्यावाश्वः | मरुतः | जगती}</span><p>अध॑ स्मा नो, अ॒रम॑तिं सजोषस॒श्चक्षु॑रिव॒ यन्त॒मनु॑ नेषथा सु॒गम् ||<span class='MantraNumbering'>{6/15}{4.3.15.1}{5.54.6}{5.4.10.6}{408, 4116}</span></td>
@@ -1344,7 +1344,7 @@
 <td class='VargaStyle2'>यू॒यं र॒यिं म॑रुतः स्पा॒र्हवी᳚रं यू॒यमृषि॑मवथ॒ साम॑विप्रम् |<span class='RishiDevChandas'>{आत्रेयः श्यावाश्वः | मरुतः | त्रिष्टुप्}</span><p>यू॒यमर्व᳚न्तं भर॒ताय॒ वाजं᳚ यू॒यं ध॑त्थ॒ राजा᳚नं श्रुष्टि॒मन्त᳚म् ||<span class='MantraNumbering'>{14/15}{4.3.16.4}{5.54.14}{5.4.10.14}{408, 4124}</span></td>
 </tr>
 <tr>
-<td class='VargaStyle2'>तद्वो᳚ यामि॒ द्रवि॑णं सद्यऊतयो॒ येना॒ स्व१॑(अ॒)र्ण त॒तना᳚म॒ नॄँर॒भि |<span class='RishiDevChandas'>{आत्रेयः श्यावाश्वः | मरुतः | जगती}</span><p>इ॒दं सु मे᳚ मरुतो हर्यता॒ वचो॒ यस्य॒ तरे᳚म॒ तर॑सा श॒तं हिमाः᳚ ||<span class='MantraNumbering'>{15/15}{4.3.16.5}{5.54.15}{5.4.10.15}{408, 4125}</span></td>
+<td class='VargaStyle2'>तद्‌ वो᳚ यामि॒ द्रवि॑णं सद्यऊतयो॒ येना॒ स्व१॑(अ॒)र्ण त॒तना᳚म॒ नॄँर॒भि |<span class='RishiDevChandas'>{आत्रेयः श्यावाश्वः | मरुतः | जगती}</span><p>इ॒दं सु मे᳚ मरुतो हर्यता॒ वचो॒ यस्य॒ तरे᳚म॒ तर॑सा श॒तं हिमाः᳚ ||<span class='MantraNumbering'>{15/15}{4.3.16.5}{5.54.15}{5.4.10.15}{408, 4125}</span></td>
 </tr>
 <tr>
 <td class='SuktaLabel'>[47] प्रयज्यवइति दशर्चस्य सूक्तस्यात्रेयः श्यावाश्वोमरुतो जगत्यंत्यात्रिष्टुप् |</td>
@@ -1365,7 +1365,7 @@
 <td class='VargaStyle1'>उदी᳚रयथा मरुतः समुद्र॒तो यू॒यं वृ॒ष्टिं व॑र्षयथा पुरीषिणः |<span class='RishiDevChandas'>{आत्रेयः श्यावाश्वः | मरुतः | जगती}</span><p>न वो᳚ दस्रा॒, उप॑ दस्यन्ति धे॒नवः॒ शुभं᳚ या॒तामनु॒ रथा᳚, अवृत्सत ||<span class='MantraNumbering'>{5/10}{4.3.17.5}{5.55.5}{5.4.11.5}{409, 4130}</span></td>
 </tr>
 <tr>
-<td class='VargaStyle2'>यदश्वा᳚न्‌ धू॒र्षु पृष॑ती॒रयु॑ग्ध्वं हिर॒ण्यया॒न्‌ प्रत्यत्काँ॒, अमु॑ग्ध्वम् |<span class='RishiDevChandas'>{आत्रेयः श्यावाश्वः | मरुतः | जगती}</span><p>विश्वा॒, इत्स्पृधो᳚ मरुतो॒ व्य॑स्यथ॒ शुभं᳚ या॒तामनु॒ रथा᳚, अवृत्सत ||<span class='MantraNumbering'>{6/10}{4.3.18.1}{5.55.6}{5.4.11.6}{409, 4131}</span></td>
+<td class='VargaStyle2'>यदश्वा᳚न्‌ धू॒र्षु पृष॑ती॒रयु॑ग्ध्वं हिर॒ण्यया॒न्‌ प्रत्यत्काँ॒, अमु॑ग्ध्वम् |<span class='RishiDevChandas'>{आत्रेयः श्यावाश्वः | मरुतः | जगती}</span><p>विश्वा॒, इत्‌ स्पृधो᳚ मरुतो॒ व्य॑स्यथ॒ शुभं᳚ या॒तामनु॒ रथा᳚, अवृत्सत ||<span class='MantraNumbering'>{6/10}{4.3.18.1}{5.55.6}{5.4.11.6}{409, 4131}</span></td>
 </tr>
 <tr>
 <td class='VargaStyle2'>न पर्व॑ता॒ न न॒द्यो᳚ वरन्त वो॒ यत्राचि॑ध्वं मरुतो॒ गच्छ॒थेदु॒ तत् |<span class='RishiDevChandas'>{आत्रेयः श्यावाश्वः | मरुतः | जगती}</span><p>उ॒त द्यावा᳚पृथि॒वी या᳚थना॒ परि॒ शुभं᳚ या॒तामनु॒ रथा᳚, अवृत्सत ||<span class='MantraNumbering'>{7/10}{4.3.18.2}{5.55.7}{5.4.11.7}{409, 4132}</span></td>
