--- a/Rigveda/SamhitaPatha/Kannada/Mandala/Format4/RVS-Kannada-F4-M05.html
+++ b/Rigveda/SamhitaPatha/Kannada/Mandala/Format4/RVS-Kannada-F4-M05.html
@@ -9,7 +9,7 @@
 <h2 class='simpHtmlH1'>|| ಋಗ್ವೇದ ಸಂಹಿತಾ (ಮಂಡಲ: 05) ||</h2>
 <hr>
 <h6 style='font-family: Arial, Helvetica, sans-serif'>For any questions, suggestions or participation in the project, contact Dayananda Aithal at dithal29@gmail.com
-<br> [Last updated on: 18-Dec-2024]</h6>
+<br> [Last updated on: 04-Jan-2025]</h6>
 <hr>
 <table>
 <tbody>
@@ -1551,7 +1551,7 @@
 <td class='VargaStyle1'>ಯೇವಾ᳚ವೃ॒ಧಂತ॒ಪಾರ್‍ಥಿ॑ವಾ॒ಯಉ॒ರಾವಂ॒ತರಿ॑ಕ್ಷ॒ಆ |<span class='RishiDevChandas'>{ಆತ್ರೇಯಃ ಶ್ಯಾವಾಶ್ವಃ | ಮರುತಃ | ಅನುಷ್ಟುಪ್}</span><p>ವೃ॒ಜನೇ᳚ವಾನ॒ದೀನಾಂ᳚ಸ॒ಧಸ್ಥೇ᳚ವಾಮ॒ಹೋದಿ॒ವಃ(ಸ್ವಾಹಾ᳚) || 7 || </td>
 </tr>
 <tr>
-<td class='VargaStyle1'>ಶರ್ಧೋ॒ಮಾರು॑ತ॒ಮುಚ್ಛಂ᳚ಸಸ॒ತ್ಯಶ॑ವಸ॒ಮೃಭ್ವ॑ಸಂ |<span class='RishiDevChandas'>{ಆತ್ರೇಯಃ ಶ್ಯಾವಾಶ್ವಃ | ಮರುತಃ | ಪಂಕ್ತಿಃ}</span><p>ಉ॒ತಸ್ಮ॒ತೇಶು॒ಭೇನರಃ॒ಪ್ರಸ್ಯಂ॒ದ್ರಾಯು॑ಜತ॒ತ್ಮನಾ॒(ಸ್ವಾಹಾ᳚) || 8 || </td>
+<td class='VargaStyle1'>ಶರ್ಧೋ॒ಮಾರು॑ತ॒ಮುಚ್ಛಂ᳚ಸಸ॒ತ್ಯಶ॑ವಸ॒ಮೃಭ್ವ॑ಸಂ |<span class='RishiDevChandas'>{ಆತ್ರೇಯಃ ಶ್ಯಾವಾಶ್ವಃ | ಮರುತಃ | ಪಂಕ್ತಿಃ}</span><p>ಉ॒ತಸ್ಮ॒ತೇಶು॒ಭೇನರಃ॒ಪ್ರಸ್ಪಂ॒ದ್ರಾಯು॑ಜತ॒ತ್ಮನಾ॒(ಸ್ವಾಹಾ᳚) || 8 || </td>
 </tr>
 <tr>
 <td class='VargaStyle1'>ಉ॒ತಸ್ಮ॒ತೇಪರು॑ಷ್ಣ್ಯಾ॒ಮೂರ್ಣಾ᳚ವಸತಶುಂ॒ಧ್ಯವಃ॑ |<span class='RishiDevChandas'>{ಆತ್ರೇಯಃ ಶ್ಯಾವಾಶ್ವಃ | ಮರುತಃ | ಅನುಷ್ಟುಪ್}</span><p>ಉ॒ತಪ॒ವ್ಯಾರಥಾ᳚ನಾ॒ಮದ್ರಿಂ᳚ಭಿಂದಂ॒ತ್ಯೋಜ॑ಸಾ॒(ಸ್ವಾಹಾ᳚) || 9 || </td>
@@ -1649,7 +1649,7 @@
 <td class='VargaStyle2'>ವ್ಯ೧॑(ಅ॒)ಕ್ತೂನ್‌ರು॑ದ್ರಾ॒ವ್ಯಹಾ᳚ನಿಶಿಕ್ವಸೋ॒ವ್ಯ೧॑(ಅ॒)ನ್ತರಿ॑ಕ್ಷಂ॒ವಿರಜಾಂ᳚ಸಿಧೂತಯಃ |<span class='RishiDevChandas'>{ಆತ್ರೇಯಃ ಶ್ಯಾವಾಶ್ವಃ | ಮರುತಃ | ಜಗತೀ}</span><p>ವಿಯದಜ್ರಾಁ॒,ಅಜ॑ಥ॒ನಾವ॑ಈಂಯಥಾ॒ವಿದು॒ರ್ಗಾಣಿ॑ಮರುತೋ॒ನಾಹ॑ರಿಷ್ಯಥ॒(ಸ್ವಾಹಾ᳚) || 4 || </td>
 </tr>
 <tr>
-<td class='VargaStyle2'>ತದ್ವೀ॒ರ್‍ಯಂ᳚ವೋಮರುತೋಮಹಿತ್ವ॒ನಂದೀ॒ರ್ಘಂತ॑ತಾನ॒ಸೂರ್‍ಯೋ॒ನಯೋಜ॑ನಂ |<span class='RishiDevChandas'>{ಆತ್ರೇಯಃ ಶ್ಯಾವಾಶ್ವಃ | ಮರುತಃ | ಜಗತೀ}</span><p>ಏತಾ॒ನಯಾಮೇ॒,ಅಗೃ॑ಭೀತಶೋಚಿ॒ಷೋಽನ॑ಶ್ವದಾಂ॒ಯನ್ನ್ಯಯಾ᳚ತನಾಗಿ॒ರಿಂ(ಸ್ವಾಹಾ᳚) || 5 || </td>
+<td class='VargaStyle2'>ತದ್‌ವೀ॒ರ್‍ಯಂ᳚ವೋಮರುತೋಮಹಿತ್ವ॒ನಂದೀ॒ರ್ಘಂತ॑ತಾನ॒ಸೂರ್‍ಯೋ॒ನಯೋಜ॑ನಂ |<span class='RishiDevChandas'>{ಆತ್ರೇಯಃ ಶ್ಯಾವಾಶ್ವಃ | ಮರುತಃ | ಜಗತೀ}</span><p>ಏತಾ॒ನಯಾಮೇ॒,ಅಗೃ॑ಭೀತಶೋಚಿ॒ಷೋಽನ॑ಶ್ವದಾಂ॒ಯನ್ನ್ಯಯಾ᳚ತನಾಗಿ॒ರಿಂ(ಸ್ವಾಹಾ᳚) || 5 || </td>
 </tr>
 <tr>
 <td class='VargaStyle1'>ಅಭ್ರಾ᳚ಜಿ॒ಶರ್ಧೋ᳚ಮರುತೋ॒ಯದ᳚ರ್ಣ॒ಸಂಮೋಷ॑ಥಾವೃ॒ಕ್ಷಂಕ॑ಪ॒ನೇವ॑ವೇಧಸಃ |<span class='RishiDevChandas'>{ಆತ್ರೇಯಃ ಶ್ಯಾವಾಶ್ವಃ | ಮರುತಃ | ಜಗತೀ}</span><p>ಅಧ॑ಸ್ಮಾನೋ,ಅ॒ರಮ॑ತಿಂಸಜೋಷಸ॒ಶ್ಚಕ್ಷು॑ರಿವ॒ಯಂತ॒ಮನು॑ನೇಷಥಾಸು॒ಗಂ(ಸ್ವಾಹಾ᳚) || 6 || <span class='MantraNumbering'>ವರ್ಗ:15</span></td>
@@ -1679,7 +1679,7 @@
 <td class='VargaStyle2'>ಯೂ॒ಯಂರ॒ಯಿಂಮ॑ರುತಃಸ್ಪಾ॒ರ್ಹವೀ᳚ರಂಯೂ॒ಯಮೃಷಿ॑ಮವಥ॒ಸಾಮ॑ವಿಪ್ರಂ |<span class='RishiDevChandas'>{ಆತ್ರೇಯಃ ಶ್ಯಾವಾಶ್ವಃ | ಮರುತಃ | ತ್ರಿಷ್ಟುಪ್}</span><p>ಯೂ॒ಯಮರ್‍ವಂ᳚ತಂಭರ॒ತಾಯ॒ವಾಜಂ᳚ಯೂ॒ಯಂಧ॑ತ್ಥ॒ರಾಜಾ᳚ನಂಶ್ರುಷ್ಟಿ॒ಮಂತ॒‌ಮ್(ಸ್ವಾಹಾ᳚) || 14 || </td>
 </tr>
 <tr>
-<td class='VargaStyle2'>ತದ್ವೋ᳚ಯಾಮಿ॒ದ್ರವಿ॑ಣಂಸದ್ಯಊತಯೋ॒ಯೇನಾ॒ಸ್ವ೧॑(ಅ॒)ರ್ಣತ॒ತನಾ᳚ಮ॒ನೄಁರ॒ಭಿ |<span class='RishiDevChandas'>{ಆತ್ರೇಯಃ ಶ್ಯಾವಾಶ್ವಃ | ಮರುತಃ | ಜಗತೀ}</span><p>ಇ॒ದಂಸುಮೇ᳚ಮರುತೋಹರ್‍ಯತಾ॒ವಚೋ॒ಯಸ್ಯ॒ತರೇ᳚ಮ॒ತರ॑ಸಾಶ॒ತಂಹಿಮಾಃ᳚(ಸ್ವಾಹಾ᳚) || 15 || </td>
+<td class='VargaStyle2'>ತದ್‌ವೋ᳚ಯಾಮಿ॒ದ್ರವಿ॑ಣಂಸದ್ಯಊತಯೋ॒ಯೇನಾ॒ಸ್ವ೧॑(ಅ॒)ರ್ಣತ॒ತನಾ᳚ಮ॒ನೄಁರ॒ಭಿ |<span class='RishiDevChandas'>{ಆತ್ರೇಯಃ ಶ್ಯಾವಾಶ್ವಃ | ಮರುತಃ | ಜಗತೀ}</span><p>ಇ॒ದಂಸುಮೇ᳚ಮರುತೋಹರ್‍ಯತಾ॒ವಚೋ॒ಯಸ್ಯ॒ತರೇ᳚ಮ॒ತರ॑ಸಾಶ॒ತಂಹಿಮಾಃ᳚(ಸ್ವಾಹಾ᳚) || 15 || </td>
 </tr>
 <tr>
 <td class='SuktaLabel'>[55] ಪ್ರಯಜ್ಯವಇತಿ ದಶರ್ಚಸ್ಯ ಸೂಕ್ತಸ್ಯಾತ್ರೇಯಃ ಶ್ಯಾವಾಶ್ವೋಮರುತೋ ಜಗತ್ಯಂತ್ಯಾತ್ರಿಷ್ಟುಪ್ |<span class='MantraNumbering'>{ಮಂಡಲ:5, ಸೂಕ್ತ:55}{ಅನುವಾಕ:4, ಸೂಕ್ತ:11}{ಅಷ್ಟಕ:4, ಅಧ್ಯಾಯ:3}</span>
@@ -1701,7 +1701,7 @@
 <td class='VargaStyle1'>ಉದೀ᳚ರಯಥಾಮರುತಃಸಮುದ್ರ॒ತೋಯೂ॒ಯಂವೃ॒ಷ್ಟಿಂವ॑ರ್ಷಯಥಾಪುರೀಷಿಣಃ |<span class='RishiDevChandas'>{ಆತ್ರೇಯಃ ಶ್ಯಾವಾಶ್ವಃ | ಮರುತಃ | ಜಗತೀ}</span><p>ನವೋ᳚ದಸ್ರಾ॒,ಉಪ॑ದಸ್ಯಂತಿಧೇ॒ನವಃ॒ಶುಭಂ᳚ಯಾ॒ತಾಮನು॒ರಥಾ᳚,ಅವೃತ್ಸತ॒(ಸ್ವಾಹಾ᳚) || 5 || </td>
 </tr>
 <tr>
-<td class='VargaStyle2'>ಯದಶ್ವಾ᳚ನ್‌ಧೂ॒ರ್ಷುಪೃಷ॑ತೀ॒ರಯು॑ಗ್ಧ್ವಂಹಿರ॒ಣ್ಯಯಾ॒ನ್‌ಪ್ರತ್ಯತ್ಕಾಁ॒,ಅಮು॑ಗ್ಧ್ವಂ |<span class='RishiDevChandas'>{ಆತ್ರೇಯಃ ಶ್ಯಾವಾಶ್ವಃ | ಮರುತಃ | ಜಗತೀ}</span><p>ವಿಶ್ವಾ॒,ಇತ್ಸ್ಪೃಧೋ᳚ಮರುತೋ॒ವ್ಯ॑ಸ್ಯಥ॒ಶುಭಂ᳚ಯಾ॒ತಾಮನು॒ರಥಾ᳚,ಅವೃತ್ಸತ॒(ಸ್ವಾಹಾ᳚) || 6 || <span class='MantraNumbering'>ವರ್ಗ:18</span></td>
+<td class='VargaStyle2'>ಯದಶ್ವಾ᳚ನ್‌ಧೂ॒ರ್ಷುಪೃಷ॑ತೀ॒ರಯು॑ಗ್ಧ್ವಂಹಿರ॒ಣ್ಯಯಾ॒ನ್‌ಪ್ರತ್ಯತ್ಕಾಁ॒,ಅಮು॑ಗ್ಧ್ವಂ |<span class='RishiDevChandas'>{ಆತ್ರೇಯಃ ಶ್ಯಾವಾಶ್ವಃ | ಮರುತಃ | ಜಗತೀ}</span><p>ವಿಶ್ವಾ॒,ಇತ್‌ಸ್ಪೃಧೋ᳚ಮರುತೋ॒ವ್ಯ॑ಸ್ಯಥ॒ಶುಭಂ᳚ಯಾ॒ತಾಮನು॒ರಥಾ᳚,ಅವೃತ್ಸತ॒(ಸ್ವಾಹಾ᳚) || 6 || <span class='MantraNumbering'>ವರ್ಗ:18</span></td>
 </tr>
 <tr>
 <td class='VargaStyle2'>ನಪರ್‍ವ॑ತಾ॒ನನ॒ದ್ಯೋ᳚ವರಂತವೋ॒ಯತ್ರಾಚಿ॑ಧ್ವಂಮರುತೋ॒ಗಚ್ಛ॒ಥೇದು॒ತತ್ |<span class='RishiDevChandas'>{ಆತ್ರೇಯಃ ಶ್ಯಾವಾಶ್ವಃ | ಮರುತಃ | ಜಗತೀ}</span><p>ಉ॒ತದ್ಯಾವಾ᳚ಪೃಥಿ॒ವೀಯಾ᳚ಥನಾ॒ಪರಿ॒ಶುಭಂ᳚ಯಾ॒ತಾಮನು॒ರಥಾ᳚,ಅವೃತ್ಸತ॒(ಸ್ವಾಹಾ᳚) || 7 || </td>
