--- a/Rigveda/SamhitaPatha/Malayalam/Ashtaka/Format4/RVS-Malayalam-F4-A04.html
+++ b/Rigveda/SamhitaPatha/Malayalam/Ashtaka/Format4/RVS-Malayalam-F4-A04.html
@@ -9,7 +9,7 @@
 <h2 class='simpHtmlH1'>|| ഋഗ്വേദ സംഹിതാ (അഷ്ടക: 04) ||</h2>
 <hr>
 <h6 style='font-family: Arial, Helvetica, sans-serif'>For any questions, suggestions or participation in the project, contact Dayananda Aithal at dithal29@gmail.com
-<br> [Last updated on: 18-Dec-2024]</h6>
+<br> [Last updated on: 04-Jan-2025]</h6>
 <hr>
 <table>
 <tbody>
@@ -1220,7 +1220,7 @@
 <td class='VargaStyle1'>യേവാ᳚വൃ॒ധന്ത॒പാർഥി॑വാ॒യഉ॒രാവ॒ന്തരി॑ക്ഷ॒ആ |<span class='RishiDevChandas'>{ആത്രേയഃ ശ്യാവാശ്വഃ | മരുതഃ | അനുഷ്ടുപ്}</span><p>വൃ॒ജനേ᳚വാന॒ദീനാം᳚സ॒ധസ്ഥേ᳚വാമ॒ഹോദി॒വഃ(സ്വാഹാ᳚) || 7 || </td>
 </tr>
 <tr>
-<td class='VargaStyle1'>ശർധോ॒മാരു॑ത॒മുച്ഛം᳚സസ॒ത്യശ॑വസ॒മൃഭ്വ॑സം |<span class='RishiDevChandas'>{ആത്രേയഃ ശ്യാവാശ്വഃ | മരുതഃ | പങ്ക്തിഃ}</span><p>ഉ॒തസ്മ॒തേശു॒ഭേനരഃ॒പ്രസ്യ॒ന്ദ്രായു॑ജത॒ത്മനാ॒(സ്വാഹാ᳚) || 8 || </td>
+<td class='VargaStyle1'>ശർധോ॒മാരു॑ത॒മുച്ഛം᳚സസ॒ത്യശ॑വസ॒മൃഭ്വ॑സം |<span class='RishiDevChandas'>{ആത്രേയഃ ശ്യാവാശ്വഃ | മരുതഃ | പങ്ക്തിഃ}</span><p>ഉ॒തസ്മ॒തേശു॒ഭേനരഃ॒പ്രസ്പ॒ന്ദ്രായു॑ജത॒ത്മനാ॒(സ്വാഹാ᳚) || 8 || </td>
 </tr>
 <tr>
 <td class='VargaStyle1'>ഉ॒തസ്മ॒തേപരു॑ഷ്ണ്യാ॒മൂർണാ᳚വസതശു॒ന്ധ്യവഃ॑ |<span class='RishiDevChandas'>{ആത്രേയഃ ശ്യാവാശ്വഃ | മരുതഃ | അനുഷ്ടുപ്}</span><p>ഉ॒തപ॒വ്യാരഥാ᳚നാ॒മദ്രിം᳚ഭിന്ദ॒ന്ത്യോജ॑സാ॒(സ്വാഹാ᳚) || 9 || </td>
@@ -1316,7 +1316,7 @@
 <td class='VargaStyle2'>വ്യ1॑(അ॒)ക്തൂൻ‌രു॑ദ്രാ॒വ്യഹാ᳚നിശിക്വസോ॒വ്യ1॑(അ॒)ന്തരി॑ക്ഷം॒വിരജാം᳚സിധൂതയഃ |<span class='RishiDevChandas'>{ആത്രേയഃ ശ്യാവാശ്വഃ | മരുതഃ | ജഗതീ}</span><p>വിയദജ്രാഁ॒,അജ॑ഥ॒നാവ॑ഈംയഥാ॒വിദു॒ർഗാണി॑മരുതോ॒നാഹ॑രിഷ്യഥ॒(സ്വാഹാ᳚) || 4 || </td>
 </tr>
 <tr>
-<td class='VargaStyle2'>തദ്വീ॒ര്യം᳚വോമരുതോമഹിത്വ॒നംദീ॒ർഘംത॑താന॒സൂര്യോ॒നയോജ॑നം |<span class='RishiDevChandas'>{ആത്രേയഃ ശ്യാവാശ്വഃ | മരുതഃ | ജഗതീ}</span><p>ഏതാ॒നയാമേ॒,അഗൃ॑ഭീതശോചി॒ഷോഽന॑ശ്വദാം॒യന്ന്യയാ᳚തനാഗി॒രിം(സ്വാഹാ᳚) || 5 || </td>
+<td class='VargaStyle2'>തദ്‌വീ॒ര്യം᳚വോമരുതോമഹിത്വ॒നംദീ॒ർഘംത॑താന॒സൂര്യോ॒നയോജ॑നം |<span class='RishiDevChandas'>{ആത്രേയഃ ശ്യാവാശ്വഃ | മരുതഃ | ജഗതീ}</span><p>ഏതാ॒നയാമേ॒,അഗൃ॑ഭീതശോചി॒ഷോഽന॑ശ്വദാം॒യന്ന്യയാ᳚തനാഗി॒രിം(സ്വാഹാ᳚) || 5 || </td>
 </tr>
 <tr>
 <td class='VargaStyle1'>അഭ്രാ᳚ജി॒ശർധോ᳚മരുതോ॒യദ᳚ർണ॒സംമോഷ॑ഥാവൃ॒ക്ഷംക॑പ॒നേവ॑വേധസഃ |<span class='RishiDevChandas'>{ആത്രേയഃ ശ്യാവാശ്വഃ | മരുതഃ | ജഗതീ}</span><p>അധ॑സ്മാനോ,അ॒രമ॑തിംസജോഷസ॒ശ്ചക്ഷു॑രിവ॒യന്ത॒മനു॑നേഷഥാസു॒ഗം(സ്വാഹാ᳚) || 6 || <span class='MantraNumbering'>വർഗ:15</span></td>
@@ -1346,7 +1346,7 @@
 <td class='VargaStyle2'>യൂ॒യംര॒യിംമ॑രുതഃസ്പാ॒ർഹവീ᳚രംയൂ॒യമൃഷി॑മവഥ॒സാമ॑വിപ്രം |<span class='RishiDevChandas'>{ആത്രേയഃ ശ്യാവാശ്വഃ | മരുതഃ | ത്രിഷ്ടുപ്}</span><p>യൂ॒യമർവ᳚ന്തംഭര॒തായ॒വാജം᳚യൂ॒യംധ॑ത്ഥ॒രാജാ᳚നംശ്രുഷ്ടി॒മന്ത॒‌മ്(സ്വാഹാ᳚) || 14 || </td>
 </tr>
 <tr>
-<td class='VargaStyle2'>തദ്വോ᳚യാമി॒ദ്രവി॑ണംസദ്യഊതയോ॒യേനാ॒സ്വ1॑(അ॒)ര്ണത॒തനാ᳚മ॒നൄഁര॒ഭി |<span class='RishiDevChandas'>{ആത്രേയഃ ശ്യാവാശ്വഃ | മരുതഃ | ജഗതീ}</span><p>ഇ॒ദംസുമേ᳚മരുതോഹര്യതാ॒വചോ॒യസ്യ॒തരേ᳚മ॒തര॑സാശ॒തംഹിമാഃ᳚(സ്വാഹാ᳚) || 15 || </td>
+<td class='VargaStyle2'>തദ്‌വോ᳚യാമി॒ദ്രവി॑ണംസദ്യഊതയോ॒യേനാ॒സ്വ1॑(അ॒)ര്ണത॒തനാ᳚മ॒നൄഁര॒ഭി |<span class='RishiDevChandas'>{ആത്രേയഃ ശ്യാവാശ്വഃ | മരുതഃ | ജഗതീ}</span><p>ഇ॒ദംസുമേ᳚മരുതോഹര്യതാ॒വചോ॒യസ്യ॒തരേ᳚മ॒തര॑സാശ॒തംഹിമാഃ᳚(സ്വാഹാ᳚) || 15 || </td>
 </tr>
 <tr>
 <td class='SuktaLabel'>[47] പ്രയജ്യവഇതി ദശർചസ്യ സൂക്തസ്യാത്രേയഃ ശ്യാവാശ്വോമരുതോ ജഗത്യന്ത്യാത്രിഷ്ടുപ് |<span class='MantraNumbering'>{അഷ്ടക:4, അധ്യായ:3}{മണ്ഡല:5, സൂക്ത:55}{അനുവാക:4, സൂക്ത:11}</td>
@@ -1367,7 +1367,7 @@
 <td class='VargaStyle1'>ഉദീ᳚രയഥാമരുതഃസമുദ്ര॒തോയൂ॒യംവൃ॒ഷ്ടിംവ॑ർഷയഥാപുരീഷിണഃ |<span class='RishiDevChandas'>{ആത്രേയഃ ശ്യാവാശ്വഃ | മരുതഃ | ജഗതീ}</span><p>നവോ᳚ദസ്രാ॒,ഉപ॑ദസ്യന്തിധേ॒നവഃ॒ശുഭം᳚യാ॒താമനു॒രഥാ᳚,അവൃത്സത॒(സ്വാഹാ᳚) || 5 || </td>
 </tr>
 <tr>
-<td class='VargaStyle2'>യദശ്വാ᳚ൻ‌ധൂ॒ർഷുപൃഷ॑തീ॒രയു॑ഗ്ധ്വംഹിര॒ണ്യയാ॒ൻ‌പ്രത്യത്കാഁ॒,അമു॑ഗ്ധ്വം |<span class='RishiDevChandas'>{ആത്രേയഃ ശ്യാവാശ്വഃ | മരുതഃ | ജഗതീ}</span><p>വിശ്വാ॒,ഇത്സ്പൃധോ᳚മരുതോ॒വ്യ॑സ്യഥ॒ശുഭം᳚യാ॒താമനു॒രഥാ᳚,അവൃത്സത॒(സ്വാഹാ᳚) || 6 || <span class='MantraNumbering'>വർഗ:18</span></td>
+<td class='VargaStyle2'>യദശ്വാ᳚ൻ‌ധൂ॒ർഷുപൃഷ॑തീ॒രയു॑ഗ്ധ്വംഹിര॒ണ്യയാ॒ൻ‌പ്രത്യത്കാഁ॒,അമു॑ഗ്ധ്വം |<span class='RishiDevChandas'>{ആത്രേയഃ ശ്യാവാശ്വഃ | മരുതഃ | ജഗതീ}</span><p>വിശ്വാ॒,ഇത്‌സ്പൃധോ᳚മരുതോ॒വ്യ॑സ്യഥ॒ശുഭം᳚യാ॒താമനു॒രഥാ᳚,അവൃത്സത॒(സ്വാഹാ᳚) || 6 || <span class='MantraNumbering'>വർഗ:18</span></td>
 </tr>
 <tr>
 <td class='VargaStyle2'>നപർവ॑താ॒നന॒ദ്യോ᳚വരന്തവോ॒യത്രാചി॑ധ്വംമരുതോ॒ഗച്ഛ॒ഥേദു॒തത് |<span class='RishiDevChandas'>{ആത്രേയഃ ശ്യാവാശ്വഃ | മരുതഃ | ജഗതീ}</span><p>ഉ॒തദ്യാവാ᳚പൃഥി॒വീയാ᳚ഥനാ॒പരി॒ശുഭം᳚യാ॒താമനു॒രഥാ᳚,അവൃത്സത॒(സ്വാഹാ᳚) || 7 || </td>
