--- a/Rigveda/SamhitaPatha/Tamil/Ashtaka/Format1/RVS-Tamil-F1-A04.html
+++ b/Rigveda/SamhitaPatha/Tamil/Ashtaka/Format1/RVS-Tamil-F1-A04.html
@@ -7,7 +7,7 @@
 <body>
 <h1 class='simpHtmlH1'>|| ஶ்ரீ॒ கு³॒ரு॒ப்⁴யோ॒ ந॒ம॒꞉ ஹரி꞉ ௐ ||</h1>
 <h2 class='simpHtmlH1'>|| ருʼக்³வேத³ ஸம்ʼஹிதா (அஷ்டக: 04) ||</h2>
-<hr><h6 style='font-family: Arial, Helvetica, sans-serif'>For any questions, suggestions or participation in the project, contact Dayananda Aithal at dithal29@gmail.com<br>Mantra classification is following this convention{அஷ்டக,அத்⁴யாய,வர்க³,மந்த்ர}{மண்ட³ல,ஸூக்த,மந்த்ர}{மண்ட³ல,அனுவாக,ஸூக்த,மந்த்ர}{ருʼக்ஸம்ʼஹித ஸூக்த ஸங்க்²யா,ருʼக்ஸம்ʼஹித மந்த்ர ஸங்க்²யா}<br> [Last updated on: 18-Dec-2024]</h6>
+<hr><h6 style='font-family: Arial, Helvetica, sans-serif'>For any questions, suggestions or participation in the project, contact Dayananda Aithal at dithal29@gmail.com<br>Mantra classification is following this convention{அஷ்டக,அத்⁴யாய,வர்க³,மந்த்ர}{மண்ட³ல,ஸூக்த,மந்த்ர}{மண்ட³ல,அனுவாக,ஸூக்த,மந்த்ர}{ருʼக்ஸம்ʼஹித ஸூக்த ஸங்க்²யா,ருʼக்ஸம்ʼஹித மந்த்ர ஸங்க்²யா}<br> [Last updated on: 04-Jan-2025]</h6>
 <hr>
 <table>
 <tbody>
@@ -1218,7 +1218,7 @@
 <td class='VargaStyle1'>யே வா᳚வ்ரு॒ʼத⁴ந்த॒ பார்தி²॑வா॒ ய உ॒ராவ॒ந்தரி॑க்ஷ॒ ஆ |<span class='RishiDevChandas'>{ஆத்ரேய꞉ ஶ்யாவாஶ்வ꞉ | மருத꞉ | அனுஷ்டுப்}</span><p>வ்ரு॒ʼஜனே᳚ வா ந॒தீ³னாம்᳚ʼ ஸ॒த⁴ஸ்தே²᳚ வா ம॒ஹோ தி³॒வ꞉ ||<span class='MantraNumbering'>{7/17}{4.3.9.2}{5.52.7}{5.4.8.7}{406, 4084}</span></td>
 </tr>
 <tr>
-<td class='VargaStyle1'>ஶர்தோ⁴॒ மாரு॑த॒முச்ச²ம்᳚ʼஸ ஸ॒த்யஶ॑வஸ॒ம்ருʼப்⁴வ॑ஸம் |<span class='RishiDevChandas'>{ஆத்ரேய꞉ ஶ்யாவாஶ்வ꞉ | மருத꞉ | பங்க்தி꞉}</span><p>உ॒த ஸ்ம॒ தே ஶு॒பே⁴ நர॒꞉ ப்ர ஸ்ய॒ந்த்³ரா யு॑ஜத॒ த்மனா᳚ ||<span class='MantraNumbering'>{8/17}{4.3.9.3}{5.52.8}{5.4.8.8}{406, 4085}</span></td>
+<td class='VargaStyle1'>ஶர்தோ⁴॒ மாரு॑த॒முச்ச²ம்᳚ʼஸ ஸ॒த்யஶ॑வஸ॒ம்ருʼப்⁴வ॑ஸம் |<span class='RishiDevChandas'>{ஆத்ரேய꞉ ஶ்யாவாஶ்வ꞉ | மருத꞉ | பங்க்தி꞉}</span><p>உ॒த ஸ்ம॒ தே ஶு॒பே⁴ நர॒꞉ ப்ர ஸ்ப॒ந்த்³ரா யு॑ஜத॒ த்மனா᳚ ||<span class='MantraNumbering'>{8/17}{4.3.9.3}{5.52.8}{5.4.8.8}{406, 4085}</span></td>
 </tr>
 <tr>
 <td class='VargaStyle1'>உ॒த ஸ்ம॒ தே பரு॑ஷ்ண்யா॒மூர்ணா᳚ வஸத ஶு॒ந்த்⁴யவ॑꞉ |<span class='RishiDevChandas'>{ஆத்ரேய꞉ ஶ்யாவாஶ்வ꞉ | மருத꞉ | அனுஷ்டுப்}</span><p>உ॒த ப॒வ்யா ரதா²᳚னா॒மத்³ரிம்᳚ʼ பி⁴ந்த³॒ந்த்யோஜ॑ஸா ||<span class='MantraNumbering'>{9/17}{4.3.9.4}{5.52.9}{5.4.8.9}{406, 4086}</span></td>
@@ -1314,7 +1314,7 @@
 <td class='VargaStyle2'>வ்ய1॑(அ॒)க்தூன்‌ ரு॑த்³ரா॒ வ்யஹா᳚னி ஶிக்வஸோ॒ வ்ய1॑(அ॒)ந்தரி॑க்ஷம்॒ʼ வி ரஜாம்᳚ʼஸி தூ⁴தய꞉ |<span class='RishiDevChandas'>{ஆத்ரேய꞉ ஶ்யாவாஶ்வ꞉ | மருத꞉ | ஜக³தீ}</span><p>வி யத³ஜ்ராம்॒ˮ, அஜ॑த²॒ நாவ॑ ஈம்ʼ யதா²॒ வி து³॒ர்கா³ணி॑ மருதோ॒ நாஹ॑ ரிஷ்யத² ||<span class='MantraNumbering'>{4/15}{4.3.14.4}{5.54.4}{5.4.10.4}{408, 4114}</span></td>
 </tr>
 <tr>
-<td class='VargaStyle2'>தத்³வீ॒ர்யம்᳚ʼ வோ மருதோ மஹித்வ॒னம்ʼ தீ³॒ர்க⁴ம்ʼ த॑தான॒ ஸூர்யோ॒ ந யோஜ॑னம் |<span class='RishiDevChandas'>{ஆத்ரேய꞉ ஶ்யாவாஶ்வ꞉ | மருத꞉ | ஜக³தீ}</span><p>ஏதா॒ ந யாமே॒, அக்³ரு॑ʼபீ⁴தஶோசி॒ஷோ (அ)ன॑ஶ்வதா³ம்॒ʼ யன்ன்யயா᳚தனா கி³॒ரிம் ||<span class='MantraNumbering'>{5/15}{4.3.14.5}{5.54.5}{5.4.10.5}{408, 4115}</span></td>
+<td class='VargaStyle2'>தத்³‌ வீ॒ர்யம்᳚ʼ வோ மருதோ மஹித்வ॒னம்ʼ தீ³॒ர்க⁴ம்ʼ த॑தான॒ ஸூர்யோ॒ ந யோஜ॑னம் |<span class='RishiDevChandas'>{ஆத்ரேய꞉ ஶ்யாவாஶ்வ꞉ | மருத꞉ | ஜக³தீ}</span><p>ஏதா॒ ந யாமே॒, அக்³ரு॑ʼபீ⁴தஶோசி॒ஷோ (அ)ன॑ஶ்வதா³ம்॒ʼ யன்ன்யயா᳚தனா கி³॒ரிம் ||<span class='MantraNumbering'>{5/15}{4.3.14.5}{5.54.5}{5.4.10.5}{408, 4115}</span></td>
 </tr>
 <tr>
 <td class='VargaStyle1'>அப்⁴ரா᳚ஜி॒ ஶர்தோ⁴᳚ மருதோ॒ யத³᳚ர்ண॒ஸம்ʼ மோஷ॑தா² வ்ரு॒ʼக்ஷம்ʼ க॑ப॒னேவ॑ வேத⁴ஸ꞉ |<span class='RishiDevChandas'>{ஆத்ரேய꞉ ஶ்யாவாஶ்வ꞉ | மருத꞉ | ஜக³தீ}</span><p>அத⁴॑ ஸ்மா நோ, அ॒ரம॑திம்ʼ ஸஜோஷஸ॒ஶ்சக்ஷு॑ரிவ॒ யந்த॒மனு॑ நேஷதா² ஸு॒க³ம் ||<span class='MantraNumbering'>{6/15}{4.3.15.1}{5.54.6}{5.4.10.6}{408, 4116}</span></td>
@@ -1344,7 +1344,7 @@
 <td class='VargaStyle2'>யூ॒யம்ʼ ர॒யிம்ʼ ம॑ருத꞉ ஸ்பா॒ர்ஹவீ᳚ரம்ʼ யூ॒யம்ருʼஷி॑மவத²॒ ஸாம॑விப்ரம் |<span class='RishiDevChandas'>{ஆத்ரேய꞉ ஶ்யாவாஶ்வ꞉ | மருத꞉ | த்ரிஷ்டுப்}</span><p>யூ॒யமர்வ᳚ந்தம்ʼ ப⁴ர॒தாய॒ வாஜம்᳚ʼ யூ॒யம்ʼ த⁴॑த்த²॒ ராஜா᳚னம்ʼ ஶ்ருஷ்டி॒மந்த᳚ம் ||<span class='MantraNumbering'>{14/15}{4.3.16.4}{5.54.14}{5.4.10.14}{408, 4124}</span></td>
 </tr>
 <tr>
-<td class='VargaStyle2'>தத்³வோ᳚ யாமி॒ த்³ரவி॑ணம்ʼ ஸத்³யஊதயோ॒ யேனா॒ ஸ்வ1॑(அ॒)ர்ண த॒தனா᳚ம॒ ந்ரூʼம்ˮர॒பி⁴ |<span class='RishiDevChandas'>{ஆத்ரேய꞉ ஶ்யாவாஶ்வ꞉ | மருத꞉ | ஜக³தீ}</span><p>இ॒த³ம்ʼ ஸு மே᳚ மருதோ ஹர்யதா॒ வசோ॒ யஸ்ய॒ தரே᳚ம॒ தர॑ஸா ஶ॒தம்ʼ ஹிமா᳚꞉ ||<span class='MantraNumbering'>{15/15}{4.3.16.5}{5.54.15}{5.4.10.15}{408, 4125}</span></td>
+<td class='VargaStyle2'>தத்³‌ வோ᳚ யாமி॒ த்³ரவி॑ணம்ʼ ஸத்³யஊதயோ॒ யேனா॒ ஸ்வ1॑(அ॒)ர்ண த॒தனா᳚ம॒ ந்ரூʼம்ˮர॒பி⁴ |<span class='RishiDevChandas'>{ஆத்ரேய꞉ ஶ்யாவாஶ்வ꞉ | மருத꞉ | ஜக³தீ}</span><p>இ॒த³ம்ʼ ஸு மே᳚ மருதோ ஹர்யதா॒ வசோ॒ யஸ்ய॒ தரே᳚ம॒ தர॑ஸா ஶ॒தம்ʼ ஹிமா᳚꞉ ||<span class='MantraNumbering'>{15/15}{4.3.16.5}{5.54.15}{5.4.10.15}{408, 4125}</span></td>
 </tr>
 <tr>
 <td class='SuktaLabel'>[47] ப்ரயஜ்யவஇதி த³ஶர்சஸ்ய ஸூக்தஸ்யாத்ரேய꞉ ஶ்யாவாஶ்வோமருதோ ஜக³த்யந்த்யாத்ரிஷ்டுப் |</td>
@@ -1365,7 +1365,7 @@
 <td class='VargaStyle1'>உதீ³᳚ரயதா² மருத꞉ ஸமுத்³ர॒தோ யூ॒யம்ʼ வ்ரு॒ʼஷ்டிம்ʼ வ॑ர்ஷயதா² புரீஷிண꞉ |<span class='RishiDevChandas'>{ஆத்ரேய꞉ ஶ்யாவாஶ்வ꞉ | மருத꞉ | ஜக³தீ}</span><p>ந வோ᳚ த³ஸ்ரா॒, உப॑ த³ஸ்யந்தி தே⁴॒னவ॒꞉ ஶுப⁴ம்᳚ʼ யா॒தாமனு॒ ரதா²᳚, அவ்ருʼத்ஸத ||<span class='MantraNumbering'>{5/10}{4.3.17.5}{5.55.5}{5.4.11.5}{409, 4130}</span></td>
 </tr>
 <tr>
-<td class='VargaStyle2'>யத³ஶ்வா᳚ன்‌ தூ⁴॒ர்ஷு ப்ருʼஷ॑தீ॒ரயு॑க்³த்⁴வம்ʼ ஹிர॒ண்யயா॒ன்‌ ப்ரத்யத்காம்॒ˮ, அமு॑க்³த்⁴வம் |<span class='RishiDevChandas'>{ஆத்ரேய꞉ ஶ்யாவாஶ்வ꞉ | மருத꞉ | ஜக³தீ}</span><p>விஶ்வா॒, இத்ஸ்ப்ருʼதோ⁴᳚ மருதோ॒ வ்ய॑ஸ்யத²॒ ஶுப⁴ம்᳚ʼ யா॒தாமனு॒ ரதா²᳚, அவ்ருʼத்ஸத ||<span class='MantraNumbering'>{6/10}{4.3.18.1}{5.55.6}{5.4.11.6}{409, 4131}</span></td>
+<td class='VargaStyle2'>யத³ஶ்வா᳚ன்‌ தூ⁴॒ர்ஷு ப்ருʼஷ॑தீ॒ரயு॑க்³த்⁴வம்ʼ ஹிர॒ண்யயா॒ன்‌ ப்ரத்யத்காம்॒ˮ, அமு॑க்³த்⁴வம் |<span class='RishiDevChandas'>{ஆத்ரேய꞉ ஶ்யாவாஶ்வ꞉ | மருத꞉ | ஜக³தீ}</span><p>விஶ்வா॒, இத்‌ ஸ்ப்ருʼதோ⁴᳚ மருதோ॒ வ்ய॑ஸ்யத²॒ ஶுப⁴ம்᳚ʼ யா॒தாமனு॒ ரதா²᳚, அவ்ருʼத்ஸத ||<span class='MantraNumbering'>{6/10}{4.3.18.1}{5.55.6}{5.4.11.6}{409, 4131}</span></td>
 </tr>
 <tr>
 <td class='VargaStyle2'>ந பர்வ॑தா॒ ந ந॒த்³யோ᳚ வரந்த வோ॒ யத்ராசி॑த்⁴வம்ʼ மருதோ॒ க³ச்ச²॒தே²து³॒ தத் |<span class='RishiDevChandas'>{ஆத்ரேய꞉ ஶ்யாவாஶ்வ꞉ | மருத꞉ | ஜக³தீ}</span><p>உ॒த த்³யாவா᳚ப்ருʼதி²॒வீ யா᳚த²னா॒ பரி॒ ஶுப⁴ம்᳚ʼ யா॒தாமனு॒ ரதா²᳚, அவ்ருʼத்ஸத ||<span class='MantraNumbering'>{7/10}{4.3.18.2}{5.55.7}{5.4.11.7}{409, 4132}</span></td>
