--- a/Rigveda/SamhitaPatha/Tamil/Ashtaka/Format4/RVS-Tamil-F4-A04.html
+++ b/Rigveda/SamhitaPatha/Tamil/Ashtaka/Format4/RVS-Tamil-F4-A04.html
@@ -9,7 +9,7 @@
 <h2 class='simpHtmlH1'>|| ருʼக்³வேத³ ஸம்ʼஹிதா (அஷ்டக: 04) ||</h2>
 <hr>
 <h6 style='font-family: Arial, Helvetica, sans-serif'>For any questions, suggestions or participation in the project, contact Dayananda Aithal at dithal29@gmail.com
-<br> [Last updated on: 18-Dec-2024]</h6>
+<br> [Last updated on: 04-Jan-2025]</h6>
 <hr>
 <table>
 <tbody>
@@ -1220,7 +1220,7 @@
 <td class='VargaStyle1'>யேவா᳚வ்ரு॒ʼத⁴ந்த॒பார்தி²॑வா॒யஉ॒ராவ॒ந்தரி॑க்ஷ॒ஆ |<span class='RishiDevChandas'>{ஆத்ரேய꞉ ஶ்யாவாஶ்வ꞉ | மருத꞉ | அனுஷ்டுப்}</span><p>வ்ரு॒ʼஜனே᳚வாந॒தீ³னாம்᳚ʼஸ॒த⁴ஸ்தே²᳚வாம॒ஹோதி³॒வ꞉(ஸ்வாஹா᳚) || 7 || </td>
 </tr>
 <tr>
-<td class='VargaStyle1'>ஶர்தோ⁴॒மாரு॑த॒முச்ச²ம்᳚ʼஸஸ॒த்யஶ॑வஸ॒ம்ருʼப்⁴வ॑ஸம் |<span class='RishiDevChandas'>{ஆத்ரேய꞉ ஶ்யாவாஶ்வ꞉ | மருத꞉ | பங்க்தி꞉}</span><p>உ॒தஸ்ம॒தேஶு॒பே⁴நர॒꞉ப்ரஸ்ய॒ந்த்³ராயு॑ஜத॒த்மனா॒(ஸ்வாஹா᳚) || 8 || </td>
+<td class='VargaStyle1'>ஶர்தோ⁴॒மாரு॑த॒முச்ச²ம்᳚ʼஸஸ॒த்யஶ॑வஸ॒ம்ருʼப்⁴வ॑ஸம் |<span class='RishiDevChandas'>{ஆத்ரேய꞉ ஶ்யாவாஶ்வ꞉ | மருத꞉ | பங்க்தி꞉}</span><p>உ॒தஸ்ம॒தேஶு॒பே⁴நர॒꞉ப்ரஸ்ப॒ந்த்³ராயு॑ஜத॒த்மனா॒(ஸ்வாஹா᳚) || 8 || </td>
 </tr>
 <tr>
 <td class='VargaStyle1'>உ॒தஸ்ம॒தேபரு॑ஷ்ண்யா॒மூர்ணா᳚வஸதஶு॒ந்த்⁴யவ॑꞉ |<span class='RishiDevChandas'>{ஆத்ரேய꞉ ஶ்யாவாஶ்வ꞉ | மருத꞉ | அனுஷ்டுப்}</span><p>உ॒தப॒வ்யாரதா²᳚னா॒மத்³ரிம்᳚ʼபி⁴ந்த³॒ந்த்யோஜ॑ஸா॒(ஸ்வாஹா᳚) || 9 || </td>
@@ -1316,7 +1316,7 @@
 <td class='VargaStyle2'>வ்ய1॑(அ॒)க்தூன்‌ரு॑த்³ரா॒வ்யஹா᳚னிஶிக்வஸோ॒வ்ய1॑(அ॒)ந்தரி॑க்ஷம்॒ʼவிரஜாம்᳚ʼஸிதூ⁴தய꞉ |<span class='RishiDevChandas'>{ஆத்ரேய꞉ ஶ்யாவாஶ்வ꞉ | மருத꞉ | ஜக³தீ}</span><p>வியத³ஜ்ராம்॒ˮ,அஜ॑த²॒நாவ॑ஈம்ʼயதா²॒விது³॒ர்கா³ணி॑மருதோ॒நாஹ॑ரிஷ்யத²॒(ஸ்வாஹா᳚) || 4 || </td>
 </tr>
 <tr>
-<td class='VargaStyle2'>தத்³வீ॒ர்யம்᳚ʼவோமருதோமஹித்வ॒னம்ʼதீ³॒ர்க⁴ம்ʼத॑தான॒ஸூர்யோ॒நயோஜ॑னம் |<span class='RishiDevChandas'>{ஆத்ரேய꞉ ஶ்யாவாஶ்வ꞉ | மருத꞉ | ஜக³தீ}</span><p>ஏதா॒நயாமே॒,அக்³ரு॑ʼபீ⁴தஶோசி॒ஷோ(அ)ன॑ஶ்வதா³ம்॒ʼயன்ன்யயா᳚தனாகி³॒ரிம்(ஸ்வாஹா᳚) || 5 || </td>
+<td class='VargaStyle2'>தத்³‌வீ॒ர்யம்᳚ʼவோமருதோமஹித்வ॒னம்ʼதீ³॒ர்க⁴ம்ʼத॑தான॒ஸூர்யோ॒நயோஜ॑னம் |<span class='RishiDevChandas'>{ஆத்ரேய꞉ ஶ்யாவாஶ்வ꞉ | மருத꞉ | ஜக³தீ}</span><p>ஏதா॒நயாமே॒,அக்³ரு॑ʼபீ⁴தஶோசி॒ஷோ(அ)ன॑ஶ்வதா³ம்॒ʼயன்ன்யயா᳚தனாகி³॒ரிம்(ஸ்வாஹா᳚) || 5 || </td>
 </tr>
 <tr>
 <td class='VargaStyle1'>அப்⁴ரா᳚ஜி॒ஶர்தோ⁴᳚மருதோ॒யத³᳚ர்ண॒ஸம்ʼமோஷ॑தா²வ்ரு॒ʼக்ஷம்ʼக॑ப॒னேவ॑வேத⁴ஸ꞉ |<span class='RishiDevChandas'>{ஆத்ரேய꞉ ஶ்யாவாஶ்வ꞉ | மருத꞉ | ஜக³தீ}</span><p>அத⁴॑ஸ்மாநோ,அ॒ரம॑திம்ʼஸஜோஷஸ॒ஶ்சக்ஷு॑ரிவ॒யந்த॒மனு॑நேஷதா²ஸு॒க³ம்(ஸ்வாஹா᳚) || 6 || <span class='MantraNumbering'>வர்க³:15</span></td>
@@ -1346,7 +1346,7 @@
 <td class='VargaStyle2'>யூ॒யம்ʼர॒யிம்ʼம॑ருத꞉ஸ்பா॒ர்ஹவீ᳚ரம்ʼயூ॒யம்ருʼஷி॑மவத²॒ஸாம॑விப்ரம் |<span class='RishiDevChandas'>{ஆத்ரேய꞉ ஶ்யாவாஶ்வ꞉ | மருத꞉ | த்ரிஷ்டுப்}</span><p>யூ॒யமர்வ᳚ந்தம்ʼப⁴ர॒தாய॒வாஜம்᳚ʼயூ॒யம்ʼத⁴॑த்த²॒ராஜா᳚னம்ʼஶ்ருஷ்டி॒மந்த॒‌ம்(ஸ்வாஹா᳚) || 14 || </td>
 </tr>
 <tr>
-<td class='VargaStyle2'>தத்³வோ᳚யாமி॒த்³ரவி॑ணம்ʼஸத்³யஊதயோ॒யேனா॒ஸ்வ1॑(அ॒)ர்ணத॒தனா᳚ம॒ந்ரூʼம்ˮர॒பி⁴ |<span class='RishiDevChandas'>{ஆத்ரேய꞉ ஶ்யாவாஶ்வ꞉ | மருத꞉ | ஜக³தீ}</span><p>இ॒த³ம்ʼஸுமே᳚மருதோஹர்யதா॒வசோ॒யஸ்ய॒தரே᳚ம॒தர॑ஸாஶ॒தம்ʼஹிமா᳚꞉(ஸ்வாஹா᳚) || 15 || </td>
+<td class='VargaStyle2'>தத்³‌வோ᳚யாமி॒த்³ரவி॑ணம்ʼஸத்³யஊதயோ॒யேனா॒ஸ்வ1॑(அ॒)ர்ணத॒தனா᳚ம॒ந்ரூʼம்ˮர॒பி⁴ |<span class='RishiDevChandas'>{ஆத்ரேய꞉ ஶ்யாவாஶ்வ꞉ | மருத꞉ | ஜக³தீ}</span><p>இ॒த³ம்ʼஸுமே᳚மருதோஹர்யதா॒வசோ॒யஸ்ய॒தரே᳚ம॒தர॑ஸாஶ॒தம்ʼஹிமா᳚꞉(ஸ்வாஹா᳚) || 15 || </td>
 </tr>
 <tr>
 <td class='SuktaLabel'>[47] ப்ரயஜ்யவஇதி த³ஶர்சஸ்ய ஸூக்தஸ்யாத்ரேய꞉ ஶ்யாவாஶ்வோமருதோ ஜக³த்யந்த்யாத்ரிஷ்டுப் |<span class='MantraNumbering'>{அஷ்டக:4, அத்⁴யாய:3}{மண்ட³ல:5, ஸூக்த:55}{அனுவாக:4, ஸூக்த:11}</td>
@@ -1367,7 +1367,7 @@
 <td class='VargaStyle1'>உதீ³᳚ரயதா²மருத꞉ஸமுத்³ர॒தோயூ॒யம்ʼவ்ரு॒ʼஷ்டிம்ʼவ॑ர்ஷயதா²புரீஷிண꞉ |<span class='RishiDevChandas'>{ஆத்ரேய꞉ ஶ்யாவாஶ்வ꞉ | மருத꞉ | ஜக³தீ}</span><p>நவோ᳚த³ஸ்ரா॒,உப॑த³ஸ்யந்திதே⁴॒னவ॒꞉ஶுப⁴ம்᳚ʼயா॒தாமனு॒ரதா²᳚,அவ்ருʼத்ஸத॒(ஸ்வாஹா᳚) || 5 || </td>
 </tr>
 <tr>
-<td class='VargaStyle2'>யத³ஶ்வா᳚ன்‌தூ⁴॒ர்ஷுப்ருʼஷ॑தீ॒ரயு॑க்³த்⁴வம்ʼஹிர॒ண்யயா॒ன்‌ப்ரத்யத்காம்॒ˮ,அமு॑க்³த்⁴வம் |<span class='RishiDevChandas'>{ஆத்ரேய꞉ ஶ்யாவாஶ்வ꞉ | மருத꞉ | ஜக³தீ}</span><p>விஶ்வா॒,இத்ஸ்ப்ருʼதோ⁴᳚மருதோ॒வ்ய॑ஸ்யத²॒ஶுப⁴ம்᳚ʼயா॒தாமனு॒ரதா²᳚,அவ்ருʼத்ஸத॒(ஸ்வாஹா᳚) || 6 || <span class='MantraNumbering'>வர்க³:18</span></td>
+<td class='VargaStyle2'>யத³ஶ்வா᳚ன்‌தூ⁴॒ர்ஷுப்ருʼஷ॑தீ॒ரயு॑க்³த்⁴வம்ʼஹிர॒ண்யயா॒ன்‌ப்ரத்யத்காம்॒ˮ,அமு॑க்³த்⁴வம் |<span class='RishiDevChandas'>{ஆத்ரேய꞉ ஶ்யாவாஶ்வ꞉ | மருத꞉ | ஜக³தீ}</span><p>விஶ்வா॒,இத்‌ஸ்ப்ருʼதோ⁴᳚மருதோ॒வ்ய॑ஸ்யத²॒ஶுப⁴ம்᳚ʼயா॒தாமனு॒ரதா²᳚,அவ்ருʼத்ஸத॒(ஸ்வாஹா᳚) || 6 || <span class='MantraNumbering'>வர்க³:18</span></td>
 </tr>
 <tr>
 <td class='VargaStyle2'>நபர்வ॑தா॒நந॒த்³யோ᳚வரந்தவோ॒யத்ராசி॑த்⁴வம்ʼமருதோ॒க³ச்ச²॒தே²து³॒தத் |<span class='RishiDevChandas'>{ஆத்ரேய꞉ ஶ்யாவாஶ்வ꞉ | மருத꞉ | ஜக³தீ}</span><p>உ॒தத்³யாவா᳚ப்ருʼதி²॒வீயா᳚த²னா॒பரி॒ஶுப⁴ம்᳚ʼயா॒தாமனு॒ரதா²᳚,அவ்ருʼத்ஸத॒(ஸ்வாஹா᳚) || 7 || </td>
