--- a/Rigveda/SamhitaPatha/Telugu/Ashtaka/Format1/RVS-Telugu-F1-A04.html
+++ b/Rigveda/SamhitaPatha/Telugu/Ashtaka/Format1/RVS-Telugu-F1-A04.html
@@ -7,7 +7,7 @@
 <body>
 <h1 class='simpHtmlH1'>|| శ్రీ॒ గు॒రు॒భ్యో॒ న॒మః॒ హరిః ఓం ||</h1>
 <h2 class='simpHtmlH1'>|| ఋగ్వేద సంహితా (అష్టక: 04) ||</h2>
-<hr><h6 style='font-family: Arial, Helvetica, sans-serif'>For any questions, suggestions or participation in the project, contact Dayananda Aithal at dithal29@gmail.com<br>Mantra classification is following this convention{అష్టక,అధ్యాయ,వర్గ,మంత్ర}{మండల,సూక్త,మంత్ర}{మండల,అనువాక,సూక్త,మంత్ర}{ఋక్సంహిత సూక్త సంఖ్యా,ఋక్సంహిత మంత్ర సంఖ్యా}<br> [Last updated on: 18-Dec-2024]</h6>
+<hr><h6 style='font-family: Arial, Helvetica, sans-serif'>For any questions, suggestions or participation in the project, contact Dayananda Aithal at dithal29@gmail.com<br>Mantra classification is following this convention{అష్టక,అధ్యాయ,వర్గ,మంత్ర}{మండల,సూక్త,మంత్ర}{మండల,అనువాక,సూక్త,మంత్ర}{ఋక్సంహిత సూక్త సంఖ్యా,ఋక్సంహిత మంత్ర సంఖ్యా}<br> [Last updated on: 04-Jan-2025]</h6>
 <hr>
 <table>
 <tbody>
@@ -1218,7 +1218,7 @@
 <td class='VargaStyle1'>యే వా᳚వృ॒ధంత॒ పార్థి॑వా॒ య ఉ॒రావం॒తరి॑క్ష॒ ఆ |<span class='RishiDevChandas'>{ఆత్రేయః శ్యావాశ్వః | మరుతః | అనుష్టుప్}</span><p>వృ॒జనే᳚ వా న॒దీనాం᳚ స॒ధస్థే᳚ వా మ॒హో ది॒వః ||<span class='MantraNumbering'>{7/17}{4.3.9.2}{5.52.7}{5.4.8.7}{406, 4084}</span></td>
 </tr>
 <tr>
-<td class='VargaStyle1'>శర్ధో॒ మారు॑త॒ముచ్ఛం᳚స స॒త్యశ॑వస॒మృభ్వ॑సం |<span class='RishiDevChandas'>{ఆత్రేయః శ్యావాశ్వః | మరుతః | పంక్తిః}</span><p>ఉ॒త స్మ॒ తే శు॒భే నరః॒ ప్ర స్యం॒ద్రా యు॑జత॒ త్మనా᳚ ||<span class='MantraNumbering'>{8/17}{4.3.9.3}{5.52.8}{5.4.8.8}{406, 4085}</span></td>
+<td class='VargaStyle1'>శర్ధో॒ మారు॑త॒ముచ్ఛం᳚స స॒త్యశ॑వస॒మృభ్వ॑సం |<span class='RishiDevChandas'>{ఆత్రేయః శ్యావాశ్వః | మరుతః | పంక్తిః}</span><p>ఉ॒త స్మ॒ తే శు॒భే నరః॒ ప్ర స్పం॒ద్రా యు॑జత॒ త్మనా᳚ ||<span class='MantraNumbering'>{8/17}{4.3.9.3}{5.52.8}{5.4.8.8}{406, 4085}</span></td>
 </tr>
 <tr>
 <td class='VargaStyle1'>ఉ॒త స్మ॒ తే పరు॑ష్ణ్యా॒మూర్ణా᳚ వసత శుం॒ధ్యవః॑ |<span class='RishiDevChandas'>{ఆత్రేయః శ్యావాశ్వః | మరుతః | అనుష్టుప్}</span><p>ఉ॒త ప॒వ్యా రథా᳚నా॒మద్రిం᳚ భిందం॒త్యోజ॑సా ||<span class='MantraNumbering'>{9/17}{4.3.9.4}{5.52.9}{5.4.8.9}{406, 4086}</span></td>
@@ -1314,7 +1314,7 @@
 <td class='VargaStyle2'>వ్య1॑(అ॒)క్తూన్‌ రు॑ద్రా॒ వ్యహా᳚ని శిక్వసో॒ వ్య1॑(అ॒)న్తరి॑క్షం॒ వి రజాం᳚సి ధూతయః |<span class='RishiDevChandas'>{ఆత్రేయః శ్యావాశ్వః | మరుతః | జగతీ}</span><p>వి యదజ్రాఀ॒, అజ॑థ॒ నావ॑ ఈం యథా॒ వి దు॒ర్గాణి॑ మరుతో॒ నాహ॑ రిష్యథ ||<span class='MantraNumbering'>{4/15}{4.3.14.4}{5.54.4}{5.4.10.4}{408, 4114}</span></td>
 </tr>
 <tr>
-<td class='VargaStyle2'>తద్వీ॒ర్యం᳚ వో మరుతో మహిత్వ॒నం దీ॒ర్ఘం త॑తాన॒ సూర్యో॒ న యోజ॑నం |<span class='RishiDevChandas'>{ఆత్రేయః శ్యావాశ్వః | మరుతః | జగతీ}</span><p>ఏతా॒ న యామే॒, అగృ॑భీతశోచి॒షో ఽన॑శ్వదాం॒ యన్న్యయా᳚తనా గి॒రిం ||<span class='MantraNumbering'>{5/15}{4.3.14.5}{5.54.5}{5.4.10.5}{408, 4115}</span></td>
+<td class='VargaStyle2'>తద్‌ వీ॒ర్యం᳚ వో మరుతో మహిత్వ॒నం దీ॒ర్ఘం త॑తాన॒ సూర్యో॒ న యోజ॑నం |<span class='RishiDevChandas'>{ఆత్రేయః శ్యావాశ్వః | మరుతః | జగతీ}</span><p>ఏతా॒ న యామే॒, అగృ॑భీతశోచి॒షో ఽన॑శ్వదాం॒ యన్న్యయా᳚తనా గి॒రిం ||<span class='MantraNumbering'>{5/15}{4.3.14.5}{5.54.5}{5.4.10.5}{408, 4115}</span></td>
 </tr>
 <tr>
 <td class='VargaStyle1'>అభ్రా᳚జి॒ శర్ధో᳚ మరుతో॒ యద᳚ర్ణ॒సం మోష॑థా వృ॒క్షం క॑ప॒నేవ॑ వేధసః |<span class='RishiDevChandas'>{ఆత్రేయః శ్యావాశ్వః | మరుతః | జగతీ}</span><p>అధ॑ స్మా నో, అ॒రమ॑తిం సజోషస॒శ్చక్షు॑రివ॒ యంత॒మను॑ నేషథా సు॒గం ||<span class='MantraNumbering'>{6/15}{4.3.15.1}{5.54.6}{5.4.10.6}{408, 4116}</span></td>
@@ -1344,7 +1344,7 @@
 <td class='VargaStyle2'>యూ॒యం ర॒యిం మ॑రుతః స్పా॒ర్హవీ᳚రం యూ॒యమృషి॑మవథ॒ సామ॑విప్రం |<span class='RishiDevChandas'>{ఆత్రేయః శ్యావాశ్వః | మరుతః | త్రిష్టుప్}</span><p>యూ॒యమర్వం᳚తం భర॒తాయ॒ వాజం᳚ యూ॒యం ధ॑త్థ॒ రాజా᳚నం శ్రుష్టి॒మంతం᳚ ||<span class='MantraNumbering'>{14/15}{4.3.16.4}{5.54.14}{5.4.10.14}{408, 4124}</span></td>
 </tr>
 <tr>
-<td class='VargaStyle2'>తద్వో᳚ యామి॒ ద్రవి॑ణం సద్యఊతయో॒ యేనా॒ స్వ1॑(అ॒)ర్ణ త॒తనా᳚మ॒ నౄఀర॒భి |<span class='RishiDevChandas'>{ఆత్రేయః శ్యావాశ్వః | మరుతః | జగతీ}</span><p>ఇ॒దం సు మే᳚ మరుతో హర్యతా॒ వచో॒ యస్య॒ తరే᳚మ॒ తర॑సా శ॒తం హిమాః᳚ ||<span class='MantraNumbering'>{15/15}{4.3.16.5}{5.54.15}{5.4.10.15}{408, 4125}</span></td>
+<td class='VargaStyle2'>తద్‌ వో᳚ యామి॒ ద్రవి॑ణం సద్యఊతయో॒ యేనా॒ స్వ1॑(అ॒)ర్ణ త॒తనా᳚మ॒ నౄఀర॒భి |<span class='RishiDevChandas'>{ఆత్రేయః శ్యావాశ్వః | మరుతః | జగతీ}</span><p>ఇ॒దం సు మే᳚ మరుతో హర్యతా॒ వచో॒ యస్య॒ తరే᳚మ॒ తర॑సా శ॒తం హిమాః᳚ ||<span class='MantraNumbering'>{15/15}{4.3.16.5}{5.54.15}{5.4.10.15}{408, 4125}</span></td>
 </tr>
 <tr>
 <td class='SuktaLabel'>[47] ప్రయజ్యవఇతి దశర్చస్య సూక్తస్యాత్రేయః శ్యావాశ్వోమరుతో జగత్యంత్యాత్రిష్టుప్ |</td>
@@ -1365,7 +1365,7 @@
 <td class='VargaStyle1'>ఉదీ᳚రయథా మరుతః సముద్ర॒తో యూ॒యం వృ॒ష్టిం వ॑ర్షయథా పురీషిణః |<span class='RishiDevChandas'>{ఆత్రేయః శ్యావాశ్వః | మరుతః | జగతీ}</span><p>న వో᳚ దస్రా॒, ఉప॑ దస్యంతి ధే॒నవః॒ శుభం᳚ యా॒తామను॒ రథా᳚, అవృత్సత ||<span class='MantraNumbering'>{5/10}{4.3.17.5}{5.55.5}{5.4.11.5}{409, 4130}</span></td>
 </tr>
 <tr>
-<td class='VargaStyle2'>యదశ్వా᳚న్‌ ధూ॒ర్షు పృష॑తీ॒రయు॑గ్ధ్వం హిర॒ణ్యయా॒న్‌ ప్రత్యత్కాఀ॒, అము॑గ్ధ్వం |<span class='RishiDevChandas'>{ఆత్రేయః శ్యావాశ్వః | మరుతః | జగతీ}</span><p>విశ్వా॒, ఇత్స్పృధో᳚ మరుతో॒ వ్య॑స్యథ॒ శుభం᳚ యా॒తామను॒ రథా᳚, అవృత్సత ||<span class='MantraNumbering'>{6/10}{4.3.18.1}{5.55.6}{5.4.11.6}{409, 4131}</span></td>
+<td class='VargaStyle2'>యదశ్వా᳚న్‌ ధూ॒ర్షు పృష॑తీ॒రయు॑గ్ధ్వం హిర॒ణ్యయా॒న్‌ ప్రత్యత్కాఀ॒, అము॑గ్ధ్వం |<span class='RishiDevChandas'>{ఆత్రేయః శ్యావాశ్వః | మరుతః | జగతీ}</span><p>విశ్వా॒, ఇత్‌ స్పృధో᳚ మరుతో॒ వ్య॑స్యథ॒ శుభం᳚ యా॒తామను॒ రథా᳚, అవృత్సత ||<span class='MantraNumbering'>{6/10}{4.3.18.1}{5.55.6}{5.4.11.6}{409, 4131}</span></td>
 </tr>
 <tr>
 <td class='VargaStyle2'>న పర్వ॑తా॒ న న॒ద్యో᳚ వరంత వో॒ యత్రాచి॑ధ్వం మరుతో॒ గచ్ఛ॒థేదు॒ తత్ |<span class='RishiDevChandas'>{ఆత్రేయః శ్యావాశ్వః | మరుతః | జగతీ}</span><p>ఉ॒త ద్యావా᳚పృథి॒వీ యా᳚థనా॒ పరి॒ శుభం᳚ యా॒తామను॒ రథా᳚, అవృత్సత ||<span class='MantraNumbering'>{7/10}{4.3.18.2}{5.55.7}{5.4.11.7}{409, 4132}</span></td>
