--- a/Rigveda/SamhitaPatha/Devanagari/Ashtaka/Format3/RVS-Devanagari-F3-A04.html
+++ b/Rigveda/SamhitaPatha/Devanagari/Ashtaka/Format3/RVS-Devanagari-F3-A04.html
@@ -9,7 +9,7 @@
 <h2 class='simpHtmlH1'>|| ऋग्वेद संहिता (अष्टक: 04) ||</h2>
 <hr>
 <h6 style='font-family: Arial, Helvetica, sans-serif'>For any questions, suggestions or participation in the project, contact Dayananda Aithal at dithal29@gmail.com
-<br> [Last updated on: 18-Dec-2024]</h6>
+<br> [Last updated on: 04-Jan-2025]</h6>
 <hr>
 <table>
 <tbody>
@@ -1220,7 +1220,7 @@
 <td class='VargaStyle1'>येवा᳚वृ॒धन्त॒पार्थि॑वा॒यउ॒राव॒न्तरि॑क्ष॒आ | वृ॒जने᳚वान॒दीनां᳚स॒धस्थे᳚वाम॒होदि॒वः || 7 || </td>
 </tr>
 <tr>
-<td class='VargaStyle1'>शर्धो॒मारु॑त॒मुच्छं᳚सस॒त्यश॑वस॒मृभ्व॑सम् | उ॒तस्म॒तेशु॒भेनरः॒प्रस्य॒न्द्रायु॑जत॒त्मना᳚ || 8 || </td>
+<td class='VargaStyle1'>शर्धो॒मारु॑त॒मुच्छं᳚सस॒त्यश॑वस॒मृभ्व॑सम् | उ॒तस्म॒तेशु॒भेनरः॒प्रस्प॒न्द्रायु॑जत॒त्मना᳚ || 8 || </td>
 </tr>
 <tr>
 <td class='VargaStyle1'>उ॒तस्म॒तेपरु॑ष्ण्या॒मूर्णा᳚वसतशु॒न्ध्यवः॑ | उ॒तप॒व्यारथा᳚ना॒मद्रिं᳚भिन्द॒न्त्योज॑सा || 9 || </td>
@@ -1316,7 +1316,7 @@
 <td class='VargaStyle2'>व्य१॑(अ॒)क्तून्‌रु॑द्रा॒व्यहा᳚निशिक्वसो॒व्य१॑(अ॒)न्तरि॑क्षं॒विरजां᳚सिधूतयः |<p>वियदज्राँ॒,अज॑थ॒नाव॑ईंयथा॒विदु॒र्गाणि॑मरुतो॒नाह॑रिष्यथ || 4 || </td>
 </tr>
 <tr>
-<td class='VargaStyle2'>तद्वी॒र्यं᳚वोमरुतोमहित्व॒नंदी॒र्घंत॑तान॒सूर्यो॒नयोज॑नम् |<p>एता॒नयामे॒,अगृ॑भीतशोचि॒षोऽन॑श्वदां॒यन्न्यया᳚तनागि॒रिम् || 5 || </td>
+<td class='VargaStyle2'>तद्‌वी॒र्यं᳚वोमरुतोमहित्व॒नंदी॒र्घंत॑तान॒सूर्यो॒नयोज॑नम् |<p>एता॒नयामे॒,अगृ॑भीतशोचि॒षोऽन॑श्वदां॒यन्न्यया᳚तनागि॒रिम् || 5 || </td>
 </tr>
 <tr>
 <td class='VargaStyle1'>अभ्रा᳚जि॒शर्धो᳚मरुतो॒यद᳚र्ण॒संमोष॑थावृ॒क्षंक॑प॒नेव॑वेधसः |<p>अध॑स्मानो,अ॒रम॑तिंसजोषस॒श्चक्षु॑रिव॒यन्त॒मनु॑नेषथासु॒गम् || 6 || <span class='MantraNumbering'>वर्ग:15</span></td>
@@ -1346,7 +1346,7 @@
 <td class='VargaStyle2'>यू॒यंर॒यिंम॑रुतःस्पा॒र्हवी᳚रंयू॒यमृषि॑मवथ॒साम॑विप्रम् |<p>यू॒यमर्व᳚न्तंभर॒ताय॒वाजं᳚यू॒यंध॑त्थ॒राजा᳚नंश्रुष्टि॒मन्त᳚म् || 14 || </td>
 </tr>
 <tr>
-<td class='VargaStyle2'>तद्वो᳚यामि॒द्रवि॑णंसद्यऊतयो॒येना॒स्व१॑(अ॒)र्णत॒तना᳚म॒नॄँर॒भि |<p>इ॒दंसुमे᳚मरुतोहर्यता॒वचो॒यस्य॒तरे᳚म॒तर॑साश॒तंहिमाः᳚ || 15 || </td>
+<td class='VargaStyle2'>तद्‌वो᳚यामि॒द्रवि॑णंसद्यऊतयो॒येना॒स्व१॑(अ॒)र्णत॒तना᳚म॒नॄँर॒भि |<p>इ॒दंसुमे᳚मरुतोहर्यता॒वचो॒यस्य॒तरे᳚म॒तर॑साश॒तंहिमाः᳚ || 15 || </td>
 </tr>
 <tr>
 <td class='SuktaLabel'>[47] प्रयज्यवइति दशर्चस्य सूक्तस्यात्रेयः श्यावाश्वोमरुतो जगत्यंत्यात्रिष्टुप् |<span class='MantraNumbering'>{अष्टक:4, अध्याय:3}{मंडल:5, सूक्त:55}{अनुवाक:4, सूक्त:11}</td>
@@ -1367,7 +1367,7 @@
 <td class='VargaStyle1'>उदी᳚रयथामरुतःसमुद्र॒तोयू॒यंवृ॒ष्टिंव॑र्षयथापुरीषिणः |<p>नवो᳚दस्रा॒,उप॑दस्यन्तिधे॒नवः॒शुभं᳚या॒तामनु॒रथा᳚,अवृत्सत || 5 || </td>
 </tr>
 <tr>
-<td class='VargaStyle2'>यदश्वा᳚न्‌धू॒र्षुपृष॑ती॒रयु॑ग्ध्वंहिर॒ण्यया॒न्‌प्रत्यत्काँ॒,अमु॑ग्ध्वम् |<p>विश्वा॒,इत्स्पृधो᳚मरुतो॒व्य॑स्यथ॒शुभं᳚या॒तामनु॒रथा᳚,अवृत्सत || 6 || <span class='MantraNumbering'>वर्ग:18</span></td>
+<td class='VargaStyle2'>यदश्वा᳚न्‌धू॒र्षुपृष॑ती॒रयु॑ग्ध्वंहिर॒ण्यया॒न्‌प्रत्यत्काँ॒,अमु॑ग्ध्वम् |<p>विश्वा॒,इत्‌स्पृधो᳚मरुतो॒व्य॑स्यथ॒शुभं᳚या॒तामनु॒रथा᳚,अवृत्सत || 6 || <span class='MantraNumbering'>वर्ग:18</span></td>
 </tr>
 <tr>
 <td class='VargaStyle2'>नपर्व॑ता॒नन॒द्यो᳚वरन्तवो॒यत्राचि॑ध्वंमरुतो॒गच्छ॒थेदु॒तत् |<p>उ॒तद्यावा᳚पृथि॒वीया᳚थना॒परि॒शुभं᳚या॒तामनु॒रथा᳚,अवृत्सत || 7 || </td>
