--- a/Rigveda/SamhitaPatha/Kannada/Ashtaka/Format1/RVS-Kannada-F1-A04.html
+++ b/Rigveda/SamhitaPatha/Kannada/Ashtaka/Format1/RVS-Kannada-F1-A04.html
@@ -7,7 +7,7 @@
 <body>
 <h1 class='simpHtmlH1'>|| ಶ್ರೀ॒ ಗು॒ರು॒ಭ್ಯೋ॒ ನ॒ಮಃ॒ ಹರಿಃ ಓಂ ||</h1>
 <h2 class='simpHtmlH1'>|| ಋಗ್ವೇದ ಸಂಹಿತಾ (ಅಷ್ಟಕ: 04) ||</h2>
-<hr><h6 style='font-family: Arial, Helvetica, sans-serif'>For any questions, suggestions or participation in the project, contact Dayananda Aithal at dithal29@gmail.com<br>Mantra classification is following this convention{ಅಷ್ಟಕ,ಅಧ್ಯಾಯ,ವರ್ಗ,ಮಂತ್ರ}{ಮಂಡಲ,ಸೂಕ್ತ,ಮಂತ್ರ}{ಮಂಡಲ,ಅನುವಾಕ,ಸೂಕ್ತ,ಮಂತ್ರ}{ಋಕ್ಸಂಹಿತ ಸೂಕ್ತ ಸಂಖ್ಯಾ,ಋಕ್ಸಂಹಿತ ಮಂತ್ರ ಸಂಖ್ಯಾ}<br> [Last updated on: 18-Dec-2024]</h6>
+<hr><h6 style='font-family: Arial, Helvetica, sans-serif'>For any questions, suggestions or participation in the project, contact Dayananda Aithal at dithal29@gmail.com<br>Mantra classification is following this convention{ಅಷ್ಟಕ,ಅಧ್ಯಾಯ,ವರ್ಗ,ಮಂತ್ರ}{ಮಂಡಲ,ಸೂಕ್ತ,ಮಂತ್ರ}{ಮಂಡಲ,ಅನುವಾಕ,ಸೂಕ್ತ,ಮಂತ್ರ}{ಋಕ್ಸಂಹಿತ ಸೂಕ್ತ ಸಂಖ್ಯಾ,ಋಕ್ಸಂಹಿತ ಮಂತ್ರ ಸಂಖ್ಯಾ}<br> [Last updated on: 04-Jan-2025]</h6>
 <hr>
 <table>
 <tbody>
@@ -1218,7 +1218,7 @@
 <td class='VargaStyle1'>ಯೇ ವಾ᳚ವೃ॒ಧಂತ॒ ಪಾರ್‍ಥಿ॑ವಾ॒ ಯ ಉ॒ರಾವಂ॒ತರಿ॑ಕ್ಷ॒ ಆ |<span class='RishiDevChandas'>{ಆತ್ರೇಯಃ ಶ್ಯಾವಾಶ್ವಃ | ಮರುತಃ | ಅನುಷ್ಟುಪ್}</span><p>ವೃ॒ಜನೇ᳚ ವಾ ನ॒ದೀನಾಂ᳚ ಸ॒ಧಸ್ಥೇ᳚ ವಾ ಮ॒ಹೋ ದಿ॒ವಃ ||<span class='MantraNumbering'>{7/17}{4.3.9.2}{5.52.7}{5.4.8.7}{406, 4084}</span></td>
 </tr>
 <tr>
-<td class='VargaStyle1'>ಶರ್ಧೋ॒ ಮಾರು॑ತ॒ಮುಚ್ಛಂ᳚ಸ ಸ॒ತ್ಯಶ॑ವಸ॒ಮೃಭ್ವ॑ಸಂ |<span class='RishiDevChandas'>{ಆತ್ರೇಯಃ ಶ್ಯಾವಾಶ್ವಃ | ಮರುತಃ | ಪಂಕ್ತಿಃ}</span><p>ಉ॒ತ ಸ್ಮ॒ ತೇ ಶು॒ಭೇ ನರಃ॒ ಪ್ರ ಸ್ಯಂ॒ದ್ರಾ ಯು॑ಜತ॒ ತ್ಮನಾ᳚ ||<span class='MantraNumbering'>{8/17}{4.3.9.3}{5.52.8}{5.4.8.8}{406, 4085}</span></td>
+<td class='VargaStyle1'>ಶರ್ಧೋ॒ ಮಾರು॑ತ॒ಮುಚ್ಛಂ᳚ಸ ಸ॒ತ್ಯಶ॑ವಸ॒ಮೃಭ್ವ॑ಸಂ |<span class='RishiDevChandas'>{ಆತ್ರೇಯಃ ಶ್ಯಾವಾಶ್ವಃ | ಮರುತಃ | ಪಂಕ್ತಿಃ}</span><p>ಉ॒ತ ಸ್ಮ॒ ತೇ ಶು॒ಭೇ ನರಃ॒ ಪ್ರ ಸ್ಪಂ॒ದ್ರಾ ಯು॑ಜತ॒ ತ್ಮನಾ᳚ ||<span class='MantraNumbering'>{8/17}{4.3.9.3}{5.52.8}{5.4.8.8}{406, 4085}</span></td>
 </tr>
 <tr>
 <td class='VargaStyle1'>ಉ॒ತ ಸ್ಮ॒ ತೇ ಪರು॑ಷ್ಣ್ಯಾ॒ಮೂರ್ಣಾ᳚ ವಸತ ಶುಂ॒ಧ್ಯವಃ॑ |<span class='RishiDevChandas'>{ಆತ್ರೇಯಃ ಶ್ಯಾವಾಶ್ವಃ | ಮರುತಃ | ಅನುಷ್ಟುಪ್}</span><p>ಉ॒ತ ಪ॒ವ್ಯಾ ರಥಾ᳚ನಾ॒ಮದ್ರಿಂ᳚ ಭಿಂದಂ॒ತ್ಯೋಜ॑ಸಾ ||<span class='MantraNumbering'>{9/17}{4.3.9.4}{5.52.9}{5.4.8.9}{406, 4086}</span></td>
@@ -1314,7 +1314,7 @@
 <td class='VargaStyle2'>ವ್ಯ೧॑(ಅ॒)ಕ್ತೂನ್‌ ರು॑ದ್ರಾ॒ ವ್ಯಹಾ᳚ನಿ ಶಿಕ್ವಸೋ॒ ವ್ಯ೧॑(ಅ॒)ನ್ತರಿ॑ಕ್ಷಂ॒ ವಿ ರಜಾಂ᳚ಸಿ ಧೂತಯಃ |<span class='RishiDevChandas'>{ಆತ್ರೇಯಃ ಶ್ಯಾವಾಶ್ವಃ | ಮರುತಃ | ಜಗತೀ}</span><p>ವಿ ಯದಜ್ರಾಁ॒, ಅಜ॑ಥ॒ ನಾವ॑ ಈಂ ಯಥಾ॒ ವಿ ದು॒ರ್ಗಾಣಿ॑ ಮರುತೋ॒ ನಾಹ॑ ರಿಷ್ಯಥ ||<span class='MantraNumbering'>{4/15}{4.3.14.4}{5.54.4}{5.4.10.4}{408, 4114}</span></td>
 </tr>
 <tr>
-<td class='VargaStyle2'>ತದ್ವೀ॒ರ್‍ಯಂ᳚ ವೋ ಮರುತೋ ಮಹಿತ್ವ॒ನಂ ದೀ॒ರ್ಘಂ ತ॑ತಾನ॒ ಸೂರ್‍ಯೋ॒ ನ ಯೋಜ॑ನಂ |<span class='RishiDevChandas'>{ಆತ್ರೇಯಃ ಶ್ಯಾವಾಶ್ವಃ | ಮರುತಃ | ಜಗತೀ}</span><p>ಏತಾ॒ ನ ಯಾಮೇ॒, ಅಗೃ॑ಭೀತಶೋಚಿ॒ಷೋ ಽನ॑ಶ್ವದಾಂ॒ ಯನ್ನ್ಯಯಾ᳚ತನಾ ಗಿ॒ರಿಂ ||<span class='MantraNumbering'>{5/15}{4.3.14.5}{5.54.5}{5.4.10.5}{408, 4115}</span></td>
+<td class='VargaStyle2'>ತದ್‌ ವೀ॒ರ್‍ಯಂ᳚ ವೋ ಮರುತೋ ಮಹಿತ್ವ॒ನಂ ದೀ॒ರ್ಘಂ ತ॑ತಾನ॒ ಸೂರ್‍ಯೋ॒ ನ ಯೋಜ॑ನಂ |<span class='RishiDevChandas'>{ಆತ್ರೇಯಃ ಶ್ಯಾವಾಶ್ವಃ | ಮರುತಃ | ಜಗತೀ}</span><p>ಏತಾ॒ ನ ಯಾಮೇ॒, ಅಗೃ॑ಭೀತಶೋಚಿ॒ಷೋ ಽನ॑ಶ್ವದಾಂ॒ ಯನ್ನ್ಯಯಾ᳚ತನಾ ಗಿ॒ರಿಂ ||<span class='MantraNumbering'>{5/15}{4.3.14.5}{5.54.5}{5.4.10.5}{408, 4115}</span></td>
 </tr>
 <tr>
 <td class='VargaStyle1'>ಅಭ್ರಾ᳚ಜಿ॒ ಶರ್ಧೋ᳚ ಮರುತೋ॒ ಯದ᳚ರ್ಣ॒ಸಂ ಮೋಷ॑ಥಾ ವೃ॒ಕ್ಷಂ ಕ॑ಪ॒ನೇವ॑ ವೇಧಸಃ |<span class='RishiDevChandas'>{ಆತ್ರೇಯಃ ಶ್ಯಾವಾಶ್ವಃ | ಮರುತಃ | ಜಗತೀ}</span><p>ಅಧ॑ ಸ್ಮಾ ನೋ, ಅ॒ರಮ॑ತಿಂ ಸಜೋಷಸ॒ಶ್ಚಕ್ಷು॑ರಿವ॒ ಯಂತ॒ಮನು॑ ನೇಷಥಾ ಸು॒ಗಂ ||<span class='MantraNumbering'>{6/15}{4.3.15.1}{5.54.6}{5.4.10.6}{408, 4116}</span></td>
@@ -1344,7 +1344,7 @@
 <td class='VargaStyle2'>ಯೂ॒ಯಂ ರ॒ಯಿಂ ಮ॑ರುತಃ ಸ್ಪಾ॒ರ್ಹವೀ᳚ರಂ ಯೂ॒ಯಮೃಷಿ॑ಮವಥ॒ ಸಾಮ॑ವಿಪ್ರಂ |<span class='RishiDevChandas'>{ಆತ್ರೇಯಃ ಶ್ಯಾವಾಶ್ವಃ | ಮರುತಃ | ತ್ರಿಷ್ಟುಪ್}</span><p>ಯೂ॒ಯಮರ್‍ವಂ᳚ತಂ ಭರ॒ತಾಯ॒ ವಾಜಂ᳚ ಯೂ॒ಯಂ ಧ॑ತ್ಥ॒ ರಾಜಾ᳚ನಂ ಶ್ರುಷ್ಟಿ॒ಮಂತಂ᳚ ||<span class='MantraNumbering'>{14/15}{4.3.16.4}{5.54.14}{5.4.10.14}{408, 4124}</span></td>
 </tr>
 <tr>
-<td class='VargaStyle2'>ತದ್ವೋ᳚ ಯಾಮಿ॒ ದ್ರವಿ॑ಣಂ ಸದ್ಯಊತಯೋ॒ ಯೇನಾ॒ ಸ್ವ೧॑(ಅ॒)ರ್ಣ ತ॒ತನಾ᳚ಮ॒ ನೄಁರ॒ಭಿ |<span class='RishiDevChandas'>{ಆತ್ರೇಯಃ ಶ್ಯಾವಾಶ್ವಃ | ಮರುತಃ | ಜಗತೀ}</span><p>ಇ॒ದಂ ಸು ಮೇ᳚ ಮರುತೋ ಹರ್‍ಯತಾ॒ ವಚೋ॒ ಯಸ್ಯ॒ ತರೇ᳚ಮ॒ ತರ॑ಸಾ ಶ॒ತಂ ಹಿಮಾಃ᳚ ||<span class='MantraNumbering'>{15/15}{4.3.16.5}{5.54.15}{5.4.10.15}{408, 4125}</span></td>
+<td class='VargaStyle2'>ತದ್‌ ವೋ᳚ ಯಾಮಿ॒ ದ್ರವಿ॑ಣಂ ಸದ್ಯಊತಯೋ॒ ಯೇನಾ॒ ಸ್ವ೧॑(ಅ॒)ರ್ಣ ತ॒ತನಾ᳚ಮ॒ ನೄಁರ॒ಭಿ |<span class='RishiDevChandas'>{ಆತ್ರೇಯಃ ಶ್ಯಾವಾಶ್ವಃ | ಮರುತಃ | ಜಗತೀ}</span><p>ಇ॒ದಂ ಸು ಮೇ᳚ ಮರುತೋ ಹರ್‍ಯತಾ॒ ವಚೋ॒ ಯಸ್ಯ॒ ತರೇ᳚ಮ॒ ತರ॑ಸಾ ಶ॒ತಂ ಹಿಮಾಃ᳚ ||<span class='MantraNumbering'>{15/15}{4.3.16.5}{5.54.15}{5.4.10.15}{408, 4125}</span></td>
 </tr>
 <tr>
 <td class='SuktaLabel'>[47] ಪ್ರಯಜ್ಯವಇತಿ ದಶರ್ಚಸ್ಯ ಸೂಕ್ತಸ್ಯಾತ್ರೇಯಃ ಶ್ಯಾವಾಶ್ವೋಮರುತೋ ಜಗತ್ಯಂತ್ಯಾತ್ರಿಷ್ಟುಪ್ |</td>
@@ -1365,7 +1365,7 @@
 <td class='VargaStyle1'>ಉದೀ᳚ರಯಥಾ ಮರುತಃ ಸಮುದ್ರ॒ತೋ ಯೂ॒ಯಂ ವೃ॒ಷ್ಟಿಂ ವ॑ರ್ಷಯಥಾ ಪುರೀಷಿಣಃ |<span class='RishiDevChandas'>{ಆತ್ರೇಯಃ ಶ್ಯಾವಾಶ್ವಃ | ಮರುತಃ | ಜಗತೀ}</span><p>ನ ವೋ᳚ ದಸ್ರಾ॒, ಉಪ॑ ದಸ್ಯಂತಿ ಧೇ॒ನವಃ॒ ಶುಭಂ᳚ ಯಾ॒ತಾಮನು॒ ರಥಾ᳚, ಅವೃತ್ಸತ ||<span class='MantraNumbering'>{5/10}{4.3.17.5}{5.55.5}{5.4.11.5}{409, 4130}</span></td>
 </tr>
 <tr>
-<td class='VargaStyle2'>ಯದಶ್ವಾ᳚ನ್‌ ಧೂ॒ರ್ಷು ಪೃಷ॑ತೀ॒ರಯು॑ಗ್ಧ್ವಂ ಹಿರ॒ಣ್ಯಯಾ॒ನ್‌ ಪ್ರತ್ಯತ್ಕಾಁ॒, ಅಮು॑ಗ್ಧ್ವಂ |<span class='RishiDevChandas'>{ಆತ್ರೇಯಃ ಶ್ಯಾವಾಶ್ವಃ | ಮರುತಃ | ಜಗತೀ}</span><p>ವಿಶ್ವಾ॒, ಇತ್ಸ್ಪೃಧೋ᳚ ಮರುತೋ॒ ವ್ಯ॑ಸ್ಯಥ॒ ಶುಭಂ᳚ ಯಾ॒ತಾಮನು॒ ರಥಾ᳚, ಅವೃತ್ಸತ ||<span class='MantraNumbering'>{6/10}{4.3.18.1}{5.55.6}{5.4.11.6}{409, 4131}</span></td>
+<td class='VargaStyle2'>ಯದಶ್ವಾ᳚ನ್‌ ಧೂ॒ರ್ಷು ಪೃಷ॑ತೀ॒ರಯು॑ಗ್ಧ್ವಂ ಹಿರ॒ಣ್ಯಯಾ॒ನ್‌ ಪ್ರತ್ಯತ್ಕಾಁ॒, ಅಮು॑ಗ್ಧ್ವಂ |<span class='RishiDevChandas'>{ಆತ್ರೇಯಃ ಶ್ಯಾವಾಶ್ವಃ | ಮರುತಃ | ಜಗತೀ}</span><p>ವಿಶ್ವಾ॒, ಇತ್‌ ಸ್ಪೃಧೋ᳚ ಮರುತೋ॒ ವ್ಯ॑ಸ್ಯಥ॒ ಶುಭಂ᳚ ಯಾ॒ತಾಮನು॒ ರಥಾ᳚, ಅವೃತ್ಸತ ||<span class='MantraNumbering'>{6/10}{4.3.18.1}{5.55.6}{5.4.11.6}{409, 4131}</span></td>
 </tr>
 <tr>
 <td class='VargaStyle2'>ನ ಪರ್‍ವ॑ತಾ॒ ನ ನ॒ದ್ಯೋ᳚ ವರಂತ ವೋ॒ ಯತ್ರಾಚಿ॑ಧ್ವಂ ಮರುತೋ॒ ಗಚ್ಛ॒ಥೇದು॒ ತತ್ |<span class='RishiDevChandas'>{ಆತ್ರೇಯಃ ಶ್ಯಾವಾಶ್ವಃ | ಮರುತಃ | ಜಗತೀ}</span><p>ಉ॒ತ ದ್ಯಾವಾ᳚ಪೃಥಿ॒ವೀ ಯಾ᳚ಥನಾ॒ ಪರಿ॒ ಶುಭಂ᳚ ಯಾ॒ತಾಮನು॒ ರಥಾ᳚, ಅವೃತ್ಸತ ||<span class='MantraNumbering'>{7/10}{4.3.18.2}{5.55.7}{5.4.11.7}{409, 4132}</span></td>
