--- a/Rigveda/SamhitaPatha/Malayalam/Ashtaka/Format1/RVS-Malayalam-F1-A04.html
+++ b/Rigveda/SamhitaPatha/Malayalam/Ashtaka/Format1/RVS-Malayalam-F1-A04.html
@@ -7,7 +7,7 @@
 <body>
 <h1 class='simpHtmlH1'>|| ശ്രീ॒ ഗു॒രു॒ഭ്യോ॒ ന॒മഃ॒ ഹരിഃ ഓം ||</h1>
 <h2 class='simpHtmlH1'>|| ഋഗ്വേദ സംഹിതാ (അഷ്ടക: 04) ||</h2>
-<hr><h6 style='font-family: Arial, Helvetica, sans-serif'>For any questions, suggestions or participation in the project, contact Dayananda Aithal at dithal29@gmail.com<br>Mantra classification is following this convention{അഷ്ടക,അധ്യായ,വർഗ,മന്ത്ര}{മണ്ഡല,സൂക്ത,മന്ത്ര}{മണ്ഡല,അനുവാക,സൂക്ത,മന്ത്ര}{ഋക്സംഹിത സൂക്ത സംഖ്യാ,ഋക്സംഹിത മന്ത്ര സംഖ്യാ}<br> [Last updated on: 18-Dec-2024]</h6>
+<hr><h6 style='font-family: Arial, Helvetica, sans-serif'>For any questions, suggestions or participation in the project, contact Dayananda Aithal at dithal29@gmail.com<br>Mantra classification is following this convention{അഷ്ടക,അധ്യായ,വർഗ,മന്ത്ര}{മണ്ഡല,സൂക്ത,മന്ത്ര}{മണ്ഡല,അനുവാക,സൂക്ത,മന്ത്ര}{ഋക്സംഹിത സൂക്ത സംഖ്യാ,ഋക്സംഹിത മന്ത്ര സംഖ്യാ}<br> [Last updated on: 04-Jan-2025]</h6>
 <hr>
 <table>
 <tbody>
@@ -1218,7 +1218,7 @@
 <td class='VargaStyle1'>യേ വാ᳚വൃ॒ധന്ത॒ പാർഥി॑വാ॒ യ ഉ॒രാവ॒ന്തരി॑ക്ഷ॒ ആ |<span class='RishiDevChandas'>{ആത്രേയഃ ശ്യാവാശ്വഃ | മരുതഃ | അനുഷ്ടുപ്}</span><p>വൃ॒ജനേ᳚ വാ ന॒ദീനാം᳚ സ॒ധസ്ഥേ᳚ വാ മ॒ഹോ ദി॒വഃ ||<span class='MantraNumbering'>{7/17}{4.3.9.2}{5.52.7}{5.4.8.7}{406, 4084}</span></td>
 </tr>
 <tr>
-<td class='VargaStyle1'>ശർധോ॒ മാരു॑ത॒മുച്ഛം᳚സ സ॒ത്യശ॑വസ॒മൃഭ്വ॑സം |<span class='RishiDevChandas'>{ആത്രേയഃ ശ്യാവാശ്വഃ | മരുതഃ | പങ്ക്തിഃ}</span><p>ഉ॒ത സ്മ॒ തേ ശു॒ഭേ നരഃ॒ പ്ര സ്യ॒ന്ദ്രാ യു॑ജത॒ ത്മനാ᳚ ||<span class='MantraNumbering'>{8/17}{4.3.9.3}{5.52.8}{5.4.8.8}{406, 4085}</span></td>
+<td class='VargaStyle1'>ശർധോ॒ മാരു॑ത॒മുച്ഛം᳚സ സ॒ത്യശ॑വസ॒മൃഭ്വ॑സം |<span class='RishiDevChandas'>{ആത്രേയഃ ശ്യാവാശ്വഃ | മരുതഃ | പങ്ക്തിഃ}</span><p>ഉ॒ത സ്മ॒ തേ ശു॒ഭേ നരഃ॒ പ്ര സ്പ॒ന്ദ്രാ യു॑ജത॒ ത്മനാ᳚ ||<span class='MantraNumbering'>{8/17}{4.3.9.3}{5.52.8}{5.4.8.8}{406, 4085}</span></td>
 </tr>
 <tr>
 <td class='VargaStyle1'>ഉ॒ത സ്മ॒ തേ പരു॑ഷ്ണ്യാ॒മൂർണാ᳚ വസത ശു॒ന്ധ്യവഃ॑ |<span class='RishiDevChandas'>{ആത്രേയഃ ശ്യാവാശ്വഃ | മരുതഃ | അനുഷ്ടുപ്}</span><p>ഉ॒ത പ॒വ്യാ രഥാ᳚നാ॒മദ്രിം᳚ ഭിന്ദ॒ന്ത്യോജ॑സാ ||<span class='MantraNumbering'>{9/17}{4.3.9.4}{5.52.9}{5.4.8.9}{406, 4086}</span></td>
@@ -1314,7 +1314,7 @@
 <td class='VargaStyle2'>വ്യ1॑(അ॒)ക്തൂൻ‌ രു॑ദ്രാ॒ വ്യഹാ᳚നി ശിക്വസോ॒ വ്യ1॑(അ॒)ന്തരി॑ക്ഷം॒ വി രജാം᳚സി ധൂതയഃ |<span class='RishiDevChandas'>{ആത്രേയഃ ശ്യാവാശ്വഃ | മരുതഃ | ജഗതീ}</span><p>വി യദജ്രാഁ॒, അജ॑ഥ॒ നാവ॑ ഈം യഥാ॒ വി ദു॒ർഗാണി॑ മരുതോ॒ നാഹ॑ രിഷ്യഥ ||<span class='MantraNumbering'>{4/15}{4.3.14.4}{5.54.4}{5.4.10.4}{408, 4114}</span></td>
 </tr>
 <tr>
-<td class='VargaStyle2'>തദ്വീ॒ര്യം᳚ വോ മരുതോ മഹിത്വ॒നം ദീ॒ർഘം ത॑താന॒ സൂര്യോ॒ ന യോജ॑നം |<span class='RishiDevChandas'>{ആത്രേയഃ ശ്യാവാശ്വഃ | മരുതഃ | ജഗതീ}</span><p>ഏതാ॒ ന യാമേ॒, അഗൃ॑ഭീതശോചി॒ഷോ ഽന॑ശ്വദാം॒ യന്ന്യയാ᳚തനാ ഗി॒രിം ||<span class='MantraNumbering'>{5/15}{4.3.14.5}{5.54.5}{5.4.10.5}{408, 4115}</span></td>
+<td class='VargaStyle2'>തദ്‌ വീ॒ര്യം᳚ വോ മരുതോ മഹിത്വ॒നം ദീ॒ർഘം ത॑താന॒ സൂര്യോ॒ ന യോജ॑നം |<span class='RishiDevChandas'>{ആത്രേയഃ ശ്യാവാശ്വഃ | മരുതഃ | ജഗതീ}</span><p>ഏതാ॒ ന യാമേ॒, അഗൃ॑ഭീതശോചി॒ഷോ ഽന॑ശ്വദാം॒ യന്ന്യയാ᳚തനാ ഗി॒രിം ||<span class='MantraNumbering'>{5/15}{4.3.14.5}{5.54.5}{5.4.10.5}{408, 4115}</span></td>
 </tr>
 <tr>
 <td class='VargaStyle1'>അഭ്രാ᳚ജി॒ ശർധോ᳚ മരുതോ॒ യദ᳚ർണ॒സം മോഷ॑ഥാ വൃ॒ക്ഷം ക॑പ॒നേവ॑ വേധസഃ |<span class='RishiDevChandas'>{ആത്രേയഃ ശ്യാവാശ്വഃ | മരുതഃ | ജഗതീ}</span><p>അധ॑ സ്മാ നോ, അ॒രമ॑തിം സജോഷസ॒ശ്ചക്ഷു॑രിവ॒ യന്ത॒മനു॑ നേഷഥാ സു॒ഗം ||<span class='MantraNumbering'>{6/15}{4.3.15.1}{5.54.6}{5.4.10.6}{408, 4116}</span></td>
@@ -1344,7 +1344,7 @@
 <td class='VargaStyle2'>യൂ॒യം ര॒യിം മ॑രുതഃ സ്പാ॒ർഹവീ᳚രം യൂ॒യമൃഷി॑മവഥ॒ സാമ॑വിപ്രം |<span class='RishiDevChandas'>{ആത്രേയഃ ശ്യാവാശ്വഃ | മരുതഃ | ത്രിഷ്ടുപ്}</span><p>യൂ॒യമർവ᳚ന്തം ഭര॒തായ॒ വാജം᳚ യൂ॒യം ധ॑ത്ഥ॒ രാജാ᳚നം ശ്രുഷ്ടി॒മന്തം᳚ ||<span class='MantraNumbering'>{14/15}{4.3.16.4}{5.54.14}{5.4.10.14}{408, 4124}</span></td>
 </tr>
 <tr>
-<td class='VargaStyle2'>തദ്വോ᳚ യാമി॒ ദ്രവി॑ണം സദ്യഊതയോ॒ യേനാ॒ സ്വ1॑(അ॒)ര്ണ ത॒തനാ᳚മ॒ നൄഁര॒ഭി |<span class='RishiDevChandas'>{ആത്രേയഃ ശ്യാവാശ്വഃ | മരുതഃ | ജഗതീ}</span><p>ഇ॒ദം സു മേ᳚ മരുതോ ഹര്യതാ॒ വചോ॒ യസ്യ॒ തരേ᳚മ॒ തര॑സാ ശ॒തം ഹിമാഃ᳚ ||<span class='MantraNumbering'>{15/15}{4.3.16.5}{5.54.15}{5.4.10.15}{408, 4125}</span></td>
+<td class='VargaStyle2'>തദ്‌ വോ᳚ യാമി॒ ദ്രവി॑ണം സദ്യഊതയോ॒ യേനാ॒ സ്വ1॑(അ॒)ര്ണ ത॒തനാ᳚മ॒ നൄഁര॒ഭി |<span class='RishiDevChandas'>{ആത്രേയഃ ശ്യാവാശ്വഃ | മരുതഃ | ജഗതീ}</span><p>ഇ॒ദം സു മേ᳚ മരുതോ ഹര്യതാ॒ വചോ॒ യസ്യ॒ തരേ᳚മ॒ തര॑സാ ശ॒തം ഹിമാഃ᳚ ||<span class='MantraNumbering'>{15/15}{4.3.16.5}{5.54.15}{5.4.10.15}{408, 4125}</span></td>
 </tr>
 <tr>
 <td class='SuktaLabel'>[47] പ്രയജ്യവഇതി ദശർചസ്യ സൂക്തസ്യാത്രേയഃ ശ്യാവാശ്വോമരുതോ ജഗത്യന്ത്യാത്രിഷ്ടുപ് |</td>
@@ -1365,7 +1365,7 @@
 <td class='VargaStyle1'>ഉദീ᳚രയഥാ മരുതഃ സമുദ്ര॒തോ യൂ॒യം വൃ॒ഷ്ടിം വ॑ർഷയഥാ പുരീഷിണഃ |<span class='RishiDevChandas'>{ആത്രേയഃ ശ്യാവാശ്വഃ | മരുതഃ | ജഗതീ}</span><p>ന വോ᳚ ദസ്രാ॒, ഉപ॑ ദസ്യന്തി ധേ॒നവഃ॒ ശുഭം᳚ യാ॒താമനു॒ രഥാ᳚, അവൃത്സത ||<span class='MantraNumbering'>{5/10}{4.3.17.5}{5.55.5}{5.4.11.5}{409, 4130}</span></td>
 </tr>
 <tr>
-<td class='VargaStyle2'>യദശ്വാ᳚ൻ‌ ധൂ॒ർഷു പൃഷ॑തീ॒രയു॑ഗ്ധ്വം ഹിര॒ണ്യയാ॒ൻ‌ പ്രത്യത്കാഁ॒, അമു॑ഗ്ധ്വം |<span class='RishiDevChandas'>{ആത്രേയഃ ശ്യാവാശ്വഃ | മരുതഃ | ജഗതീ}</span><p>വിശ്വാ॒, ഇത്സ്പൃധോ᳚ മരുതോ॒ വ്യ॑സ്യഥ॒ ശുഭം᳚ യാ॒താമനു॒ രഥാ᳚, അവൃത്സത ||<span class='MantraNumbering'>{6/10}{4.3.18.1}{5.55.6}{5.4.11.6}{409, 4131}</span></td>
+<td class='VargaStyle2'>യദശ്വാ᳚ൻ‌ ധൂ॒ർഷു പൃഷ॑തീ॒രയു॑ഗ്ധ്വം ഹിര॒ണ്യയാ॒ൻ‌ പ്രത്യത്കാഁ॒, അമു॑ഗ്ധ്വം |<span class='RishiDevChandas'>{ആത്രേയഃ ശ്യാവാശ്വഃ | മരുതഃ | ജഗതീ}</span><p>വിശ്വാ॒, ഇത്‌ സ്പൃധോ᳚ മരുതോ॒ വ്യ॑സ്യഥ॒ ശുഭം᳚ യാ॒താമനു॒ രഥാ᳚, അവൃത്സത ||<span class='MantraNumbering'>{6/10}{4.3.18.1}{5.55.6}{5.4.11.6}{409, 4131}</span></td>
 </tr>
 <tr>
 <td class='VargaStyle2'>ന പർവ॑താ॒ ന ന॒ദ്യോ᳚ വരന്ത വോ॒ യത്രാചി॑ധ്വം മരുതോ॒ ഗച്ഛ॒ഥേദു॒ തത് |<span class='RishiDevChandas'>{ആത്രേയഃ ശ്യാവാശ്വഃ | മരുതഃ | ജഗതീ}</span><p>ഉ॒ത ദ്യാവാ᳚പൃഥി॒വീ യാ᳚ഥനാ॒ പരി॒ ശുഭം᳚ യാ॒താമനു॒ രഥാ᳚, അവൃത്സത ||<span class='MantraNumbering'>{7/10}{4.3.18.2}{5.55.7}{5.4.11.7}{409, 4132}</span></td>
