--- a/Rigveda/SamhitaPatha/Telugu/Ashtaka/Format3/RVS-Telugu-F3-A04.html
+++ b/Rigveda/SamhitaPatha/Telugu/Ashtaka/Format3/RVS-Telugu-F3-A04.html
@@ -9,7 +9,7 @@
 <h2 class='simpHtmlH1'>|| ఋగ్వేద సంహితా (అష్టక: 04) ||</h2>
 <hr>
 <h6 style='font-family: Arial, Helvetica, sans-serif'>For any questions, suggestions or participation in the project, contact Dayananda Aithal at dithal29@gmail.com
-<br> [Last updated on: 18-Dec-2024]</h6>
+<br> [Last updated on: 04-Jan-2025]</h6>
 <hr>
 <table>
 <tbody>
@@ -1220,7 +1220,7 @@
 <td class='VargaStyle1'>యేవా᳚వృ॒ధంత॒పార్థి॑వా॒యఉ॒రావం॒తరి॑క్ష॒ఆ | వృ॒జనే᳚వాన॒దీనాం᳚స॒ధస్థే᳚వామ॒హోది॒వః || 7 || </td>
 </tr>
 <tr>
-<td class='VargaStyle1'>శర్ధో॒మారు॑త॒ముచ్ఛం᳚సస॒త్యశ॑వస॒మృభ్వ॑సం | ఉ॒తస్మ॒తేశు॒భేనరః॒ప్రస్యం॒ద్రాయు॑జత॒త్మనా᳚ || 8 || </td>
+<td class='VargaStyle1'>శర్ధో॒మారు॑త॒ముచ్ఛం᳚సస॒త్యశ॑వస॒మృభ్వ॑సం | ఉ॒తస్మ॒తేశు॒భేనరః॒ప్రస్పం॒ద్రాయు॑జత॒త్మనా᳚ || 8 || </td>
 </tr>
 <tr>
 <td class='VargaStyle1'>ఉ॒తస్మ॒తేపరు॑ష్ణ్యా॒మూర్ణా᳚వసతశుం॒ధ్యవః॑ | ఉ॒తప॒వ్యారథా᳚నా॒మద్రిం᳚భిందం॒త్యోజ॑సా || 9 || </td>
@@ -1316,7 +1316,7 @@
 <td class='VargaStyle2'>వ్య1॑(అ॒)క్తూన్‌రు॑ద్రా॒వ్యహా᳚నిశిక్వసో॒వ్య1॑(అ॒)న్తరి॑క్షం॒విరజాం᳚సిధూతయః |<p>వియదజ్రాఀ॒,అజ॑థ॒నావ॑ఈంయథా॒విదు॒ర్గాణి॑మరుతో॒నాహ॑రిష్యథ || 4 || </td>
 </tr>
 <tr>
-<td class='VargaStyle2'>తద్వీ॒ర్యం᳚వోమరుతోమహిత్వ॒నందీ॒ర్ఘంత॑తాన॒సూర్యో॒నయోజ॑నం |<p>ఏతా॒నయామే॒,అగృ॑భీతశోచి॒షోఽన॑శ్వదాం॒యన్న్యయా᳚తనాగి॒రిం || 5 || </td>
+<td class='VargaStyle2'>తద్‌వీ॒ర్యం᳚వోమరుతోమహిత్వ॒నందీ॒ర్ఘంత॑తాన॒సూర్యో॒నయోజ॑నం |<p>ఏతా॒నయామే॒,అగృ॑భీతశోచి॒షోఽన॑శ్వదాం॒యన్న్యయా᳚తనాగి॒రిం || 5 || </td>
 </tr>
 <tr>
 <td class='VargaStyle1'>అభ్రా᳚జి॒శర్ధో᳚మరుతో॒యద᳚ర్ణ॒సంమోష॑థావృ॒క్షంక॑ప॒నేవ॑వేధసః |<p>అధ॑స్మానో,అ॒రమ॑తింసజోషస॒శ్చక్షు॑రివ॒యంత॒మను॑నేషథాసు॒గం || 6 || <span class='MantraNumbering'>వర్గ:15</span></td>
@@ -1346,7 +1346,7 @@
 <td class='VargaStyle2'>యూ॒యంర॒యింమ॑రుతఃస్పా॒ర్హవీ᳚రంయూ॒యమృషి॑మవథ॒సామ॑విప్రం |<p>యూ॒యమర్వం᳚తంభర॒తాయ॒వాజం᳚యూ॒యంధ॑త్థ॒రాజా᳚నంశ్రుష్టి॒మంతం᳚ || 14 || </td>
 </tr>
 <tr>
-<td class='VargaStyle2'>తద్వో᳚యామి॒ద్రవి॑ణంసద్యఊతయో॒యేనా॒స్వ1॑(అ॒)ర్ణత॒తనా᳚మ॒నౄఀర॒భి |<p>ఇ॒దంసుమే᳚మరుతోహర్యతా॒వచో॒యస్య॒తరే᳚మ॒తర॑సాశ॒తంహిమాః᳚ || 15 || </td>
+<td class='VargaStyle2'>తద్‌వో᳚యామి॒ద్రవి॑ణంసద్యఊతయో॒యేనా॒స్వ1॑(అ॒)ర్ణత॒తనా᳚మ॒నౄఀర॒భి |<p>ఇ॒దంసుమే᳚మరుతోహర్యతా॒వచో॒యస్య॒తరే᳚మ॒తర॑సాశ॒తంహిమాః᳚ || 15 || </td>
 </tr>
 <tr>
 <td class='SuktaLabel'>[47] ప్రయజ్యవఇతి దశర్చస్య సూక్తస్యాత్రేయః శ్యావాశ్వోమరుతో జగత్యంత్యాత్రిష్టుప్ |<span class='MantraNumbering'>{అష్టక:4, అధ్యాయ:3}{మండల:5, సూక్త:55}{అనువాక:4, సూక్త:11}</td>
@@ -1367,7 +1367,7 @@
 <td class='VargaStyle1'>ఉదీ᳚రయథామరుతఃసముద్ర॒తోయూ॒యంవృ॒ష్టింవ॑ర్షయథాపురీషిణః |<p>నవో᳚దస్రా॒,ఉప॑దస్యంతిధే॒నవః॒శుభం᳚యా॒తామను॒రథా᳚,అవృత్సత || 5 || </td>
 </tr>
 <tr>
-<td class='VargaStyle2'>యదశ్వా᳚న్‌ధూ॒ర్షుపృష॑తీ॒రయు॑గ్ధ్వంహిర॒ణ్యయా॒న్‌ప్రత్యత్కాఀ॒,అము॑గ్ధ్వం |<p>విశ్వా॒,ఇత్స్పృధో᳚మరుతో॒వ్య॑స్యథ॒శుభం᳚యా॒తామను॒రథా᳚,అవృత్సత || 6 || <span class='MantraNumbering'>వర్గ:18</span></td>
+<td class='VargaStyle2'>యదశ్వా᳚న్‌ధూ॒ర్షుపృష॑తీ॒రయు॑గ్ధ్వంహిర॒ణ్యయా॒న్‌ప్రత్యత్కాఀ॒,అము॑గ్ధ్వం |<p>విశ్వా॒,ఇత్‌స్పృధో᳚మరుతో॒వ్య॑స్యథ॒శుభం᳚యా॒తామను॒రథా᳚,అవృత్సత || 6 || <span class='MantraNumbering'>వర్గ:18</span></td>
 </tr>
 <tr>
 <td class='VargaStyle2'>నపర్వ॑తా॒నన॒ద్యో᳚వరంతవో॒యత్రాచి॑ధ్వంమరుతో॒గచ్ఛ॒థేదు॒తత్ |<p>ఉ॒తద్యావా᳚పృథి॒వీయా᳚థనా॒పరి॒శుభం᳚యా॒తామను॒రథా᳚,అవృత్సత || 7 || </td>
